--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "La signature n’est pas valide.",
   "api.errors.noInputsError": "Le wallet restauré à partir de votre phrase de secours est vide. Veuillez vérifier votre phrase de secours and retenter de restaurer le wallet.",
   "api.errors.pendingTransactionError": "Erreur lors de la mise à jour des transactions en cours.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Un retour en arrière a été détecté.",
   "api.errors.sendTransactionApiError": "Erreur reçue du serveur lors de l'envoi de la transaction.",
   "api.errors.sendTransactionError": "Erreur reçue de l'API lors de l'envoi de la transaction.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Un portefeuille standard soutenu par une phrase de rétablissement.",
   "wallet.add.optionDialog.create.paperWallet.description": "Les portefeuilles en papier peuvent être créés même sur des appareils non connectés à l'internet, ce qui les rend bien adaptés à la conservation au froid à usage unique.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurer le wallet",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "Si vous avez une phrase de récupération de 24 mots, choisissez cette option pour restaurer votre wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Entrez une phrase de récupération de 24 mots",
   "wallet.add.optionDialog.restore.normalWallet.description": "Si vous avez une phrase de récupération Yoroi composée de 15 mots et générée lorsque vous avez créé un wallet Yoroi, choisissez cette option pour restaurer votre wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Entrez une phrase de récupération de 15 mots",
   "wallet.add.optionDialog.restore.paperWallet.description": "Si vous avez généré un wallet papier Yoroi (généralement imprimé et conservé hors ligne), vous pouvez choisir cette option pour importer les fonds de ce wallet papier Yoroi.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Wallet Papier",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Les wallets créés avant le 29 Juillet 2020 sont de type Byron et ne peuvent pas être délégués.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Wallet de type Byron (lecture seule)",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choisissez une ère",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Les wallets de type Shelley peuvent être délégués à des stake pools (groupe d'enjeu).",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Wallet de type Shelley",
   "wallet.add.page.create.title": "Créer un wallet",
   "wallet.add.page.create.tooltip": "Générer une phrase de secours de 15 mots<br/>et créer un wallet Yoroi.",
   "wallet.add.page.daedalusTransfer.title": "Transférer des fonds à partir d'un wallet Daedalus vers Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano est le premier protocole de preuve d'enjeu dont la sécurité est prouvée",
   "wallet.currency.pick.ergo": "Ergo construit des outils cryptographiques avancés et des fonctionnalités DeFi radicalement nouvelles, sur des bases solides issues d'une décennie de recherche et de développement des blockchains",
   "wallet.currency.pick.header": "Choisissez une devise ou une plateforme",
-  "wallet.dashboard.empty.text": "Cliquez sur 'Simple 'ou 'Advanced Staking' pour choisir le Stake Pool (groupe d'enjeu) dans lequel vous voulez déléguer. Notez que vous ne pouvez déléguer qu'à un seul Stake Pool durant ce Testnet",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "Vous n'avez pas encore délégué vos ADA",
   "wallet.dashboard.epochEndTitle": "Temps avant la fin de l'époque",
   "wallet.dashboard.epochProgress": "Progrès dans l'époque",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Revenus",
   "wallet.dashboard.stakePool.cost": "Coûts",
   "wallet.dashboard.stakePool.created": "Créé",
-  "wallet.dashboard.stakePool.descriptionButton": "Description complète",
+  "wallet.dashboard.stakePool.descriptionButton": "Description",
   "wallet.dashboard.stakePool.fullness": "Saturation",
   "wallet.dashboard.stakePool.margins": "Marges",
   "wallet.dashboard.stakePool.performance": "Performance",
   "wallet.dashboard.stakePool.pledge": "Pledge",
   "wallet.dashboard.stakePool.stake": "Enjeu",
   "wallet.dashboard.stakePool.title": "Stake Pool délégué",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total Délégué",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA peuvent être corrigés",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "Le portefeuille que vous avez sélectionné ({checksumTextPart}) est destiné aux tests et au débogage.",
   "wallet.debugwallet.explanation2": "Pour éviter tout problème, n'utilisez pas ce portefeuille.<br />Utilisez plutôt Yoroi pour créer un nouveau portefeuille.",
   "wallet.debugwallet.explanation3": "Si vous n'attendiez pas ce message, veuillez {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Approximation actuelle des récompenses que vous recevrez par époque :",
   "wallet.delegation.transaction.explanationLine1": "Vous ne pouvez déléguer qu'à un seul pool de mise à la fois",
   "wallet.delegation.transaction.explanationLine2": "Vous pouvez à tout moment changer de pool pour déléguer à un autre pool",
   "wallet.delegation.transaction.explanationLine3": "Vous pouvez annuler votre délégation à tout moment",
   "wallet.delegation.transaction.generation": "Générant la transaction",
-  "wallet.delegation.transaction.stakePoolHash": "Hash du Stake pool",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Nom du pool d'enjeux",
   "wallet.delegation.transaction.success.button.label": "Tableau de bord",
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Wallet Papier",
   "wallet.nav.type.standard": "Wallet standard",
   "wallet.nav.type.trezor": "Wallet Trezor",
-  "wallet.navigation.delegationAdvance": "Délégation (Avancé)",
   "wallet.navigation.delegationDashboard": "Tableau de bord",
-  "wallet.navigation.delegationSimple": "Délégation (simple)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Recevoir",
   "wallet.navigation.send": "Envoyer",
   "wallet.navigation.transactions": "Transactions",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Vérifier un Wallet Papier Yoroi",
   "wallet.restore.dialog.upgrade.noop": "Votre portefeuille n'avait pas besoin d'être mis à jour",
   "wallet.restore.dialog.verify.accountId.byron.label": "Somme de contrôle de compte Byron :",
+  "wallet.restore.dialog.verify.accountId.itn.label": "Somme de contrôle de compte ITN :",
   "wallet.restore.dialog.verify.accountId.label": "Le total de contrôle (checksum) du compte de votre Wallet :",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Somme de contrôle de compte Shelley :",
   "wallet.restore.dialog.verify.addressesLabel": "Adresse[s] de votre Wallet :",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Assurez vous que le total de contrôle (checksum) du compte et l'icône correspondent à ceux dont vous vous souvenez.",
   "wallet.restore.dialog.verify.intro.line3": "Assurez vous que les adresses correspondent à celles dont vous vous souvenez.",
   "wallet.restore.dialog.verify.intro.line4": "Si vous avez saisi un code mnémonique incorrect ou un mot de passe de wallet papier incorrect, vous ouvrirez alors un autre wallet. Ce dernier sera vide et aura un total de contrôle (checksum) du compte et des adresses erronés.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "Adresse[s] de votre wallet ITN :",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Adresse[s] de votre Wallet Shelley :",
   "wallet.restore.dialog.verify.title": "Vérifier le Wallet Restauré",
   "wallet.restore.dialog.verify.wallet.button.label": "Vérifier un wallet",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Calcul des frais de transaction...",
   "wallet.send.form.cannotSendToLegacy": "Vous ne pouvez pas envoyer à des adresses de type Legacy (toute adresse créée avant le 29 novembre 2019)",
   "wallet.send.form.cannotSendToReward": "Vous ne pouvez pas envoyer à un compte de compensation",
-  "wallet.send.form.description.hint": "Vous pouvez ajouter un message si vous le souhaitez",
-  "wallet.send.form.description.label": "Description",
   "wallet.send.form.errors.invalidAddress": "Veuillez entrer une adresse valide.",
   "wallet.send.form.errors.invalidAmount": "Veuillez entrer un montant valide.",
-  "wallet.send.form.errors.invalidTitle": "Veuillez entrer un titre d'au moins 3 caractères.",
   "wallet.send.form.errors.tooSmallUtxo": "Vous ne pouvez pas envoyer moins de {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Adresse du wallet",
   "wallet.send.form.receiver.label": "Destinataire",
   "wallet.send.form.sendAll.checkboxLabel": "Envoyer tous les {currency}",
   "wallet.send.form.sendingIsDisabled": "Impossible d'envoyer une nouvelle transaction lorsque la précédente n'est pas terminée.",
-  "wallet.send.form.title.hint": "Ex: Envoi à Marc",
-  "wallet.send.form.title.label": "Titre",
   "wallet.send.form.transactionFeeError": "Fonds Ada insuffisants pour payer les frais de transaction. Essayez un montant plus petit.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Après avoir connecté votre périphérique Ledger au port USB de votre ordinateur, appuyez sur le bouton envoi du Ledger.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Assurez-vous que l’application Cardano ADA reste ouverte sur le périphérique Ledger durant tout le processus.",
