--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "La firma non è valida.",
   "api.errors.noInputsError": "Il portafoglio ripristinato dalla frase di recupero è vuoto. Si prega di controllare la frase di recupero e tentare nuovamente il ripristino.",
   "api.errors.pendingTransactionError": "Errore durante l'aggiornamento delle transazioni in sospeso.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback rilevato.",
   "api.errors.sendTransactionApiError": "Errore ricevuto dal server durante l'invio della transazione.",
   "api.errors.sendTransactionError": "Errore ricevuto dalla chiamata con il metodo API durante l'invio della transazione.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "Ripristina portafoglio",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "Se hai una frase di recupero Yoroi composta da 15 parole generate quando hai creato un portafoglio Yoroi, scegli questa opzione per ripristinare il tuo portafoglio.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Introduci una frase di recupero composta da 15 parole",
   "wallet.add.optionDialog.restore.paperWallet.description": "Se hai creato un portafoglio cartaceo Yoroi (che di solito viene stampato e tenuto offline), puoi scegliere questa opzione per importare i fondi dal tuo portafoglio cartaceo Yoroi.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Portafoglio cartaceo",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "Crea portafoglio",
   "wallet.add.page.create.tooltip": "Genera una nuova frase di recupero di 15 parole<br/>e crea un portafoglio Yoroi.",
   "wallet.add.page.daedalusTransfer.title": "Trasferisci fondi dal portafoglio Daedalus a Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano is the first provably secure proof of stake protocol",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Pick a currency or platform",
-  "wallet.dashboard.empty.text": "Vai allo Staking semplice o avanzato per scegliere in quale stake pool vuoi delegare i tuoi fondi. Nota, puoi delegare solo una stake pool per questa Testnet",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "Non hai ancora delegato i tuoi ADA",
   "wallet.dashboard.epochEndTitle": "Tempo fino alla fine dell'Epoca",
   "wallet.dashboard.epochProgress": "Progresso dell'epoca",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Rendita",
   "wallet.dashboard.stakePool.cost": "Costo",
   "wallet.dashboard.stakePool.created": "Creato",
-  "wallet.dashboard.stakePool.descriptionButton": "Descrizione completa",
+  "wallet.dashboard.stakePool.descriptionButton": "Descrizione",
   "wallet.dashboard.stakePool.fullness": "Volume",
   "wallet.dashboard.stakePool.margins": "Margini",
   "wallet.dashboard.stakePool.performance": "Prestazione",
   "wallet.dashboard.stakePool.pledge": "Garanzia",
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool delegata",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Totale ADA",
   "wallet.dashboard.summary.delegatedTitle": "Totale delegato",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA può essere corretto",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
   "wallet.debugwallet.explanation3": "If you did not expect this message, please {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Approssimazione attuale della ricompensa che riceverai per il periodo:",
   "wallet.delegation.transaction.explanationLine1": "Puoi delegare un solo stake pool alla volta",
   "wallet.delegation.transaction.explanationLine2": "Puoi spostare la tua delega ad un'altra stake pool in qualsiasi momento",
   "wallet.delegation.transaction.explanationLine3": "Puoi annullare la tua delega in qualsiasi momento",
   "wallet.delegation.transaction.generation": "Generazione della transazione",
-  "wallet.delegation.transaction.stakePoolHash": "Hash della stake pool",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Nome della stake pool",
   "wallet.delegation.transaction.success.button.label": "Dashboard",
   "wallet.delegation.transaction.success.explanation": "Tieni traccia dello stato della stake pool e del tempo rimanente per ricevere una ricompensa dalla pagina Dashboard",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Portafoglio di carta",
   "wallet.nav.type.standard": "Portafoglio Standard",
   "wallet.nav.type.trezor": "Portafoglio Trezor",
-  "wallet.navigation.delegationAdvance": "Delegazione (Avanzata)",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delega (Semplice)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Ricevi",
   "wallet.navigation.send": "Invia",
   "wallet.navigation.transactions": "Transazioni",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Verifica il paper wallet Yoroi",
   "wallet.restore.dialog.upgrade.noop": "Non è stato necessario aggiornare il tuo portafoglio",
   "wallet.restore.dialog.verify.accountId.byron.label": "Checksum dell'account Byron:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "Il checksum dell'account del tuo portafoglio:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Checksum dell'account Shelley:",
   "wallet.restore.dialog.verify.addressesLabel": "L'indirizzo[i] del tuo Wallet:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Assicurati che il checksum dell'account e l'icona corrispondano a quelli che ricordi.",
   "wallet.restore.dialog.verify.intro.line3": "Assicurati che gli indirizzi corrispondano a quelli che ricordi.",
   "wallet.restore.dialog.verify.intro.line4": "Se hai inserito mnemonici errati o una password di portafoglio errata, apri un altro portafoglio vuoto con il checksum dell'account errato e degli indirizzi errati.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Indirizzo[i] del portafoglio Shelley:",
   "wallet.restore.dialog.verify.title": "Verifica il Wallet ripristinato",
   "wallet.restore.dialog.verify.wallet.button.label": "Verifica il wallet",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Calcolo della commissione...",
   "wallet.send.form.cannotSendToLegacy": "Non è possibile inviare a indirizzi legacy (qualsiasi indirizzo creato prima del 29 novembre 2019)",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "Se vuoi puoi aggiungere un messaggio",
-  "wallet.send.form.description.label": "Descrizione",
   "wallet.send.form.errors.invalidAddress": "Si prega di inserire un indirizzo valido.",
   "wallet.send.form.errors.invalidAmount": "Si prega di inserire un importo valido.",
-  "wallet.send.form.errors.invalidTitle": "Si prega di inserire un titolo di almeno 3 caratteri.",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Indirizzo del portafoglio",
   "wallet.send.form.receiver.label": "Destinatario",
   "wallet.send.form.sendAll.checkboxLabel": "Invia tutti {currency}",
   "wallet.send.form.sendingIsDisabled": "Impossibile inviare una nuova transazione mentre una transazione esistente è ancora in sospeso.",
-  "wallet.send.form.title.hint": "E.g. Soldi per Frank",
-  "wallet.send.form.title.label": "Titolo",
   "wallet.send.form.transactionFeeError": "Non hai Ada sufficienti per pagare le fees. Prova a inviare una quantità minore.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Dopo aver collegato il dispositivo Ledger alla porta USB del computer, premere il pulsante Invia.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Assicurati che l'applicazione ADA Cardano rimanga aperta sul dispositivo Ledger durante tutto il processo.",
