--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "署名が無効です。",
   "api.errors.noInputsError": "ご指定のダイダロスウォレットに残高がありません。復元フレーズをご確認ください。",
   "api.errors.pendingTransactionError": "保留トランザクション更新中にエラーが発生しました。",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "ロールバックを検出しました。",
   "api.errors.sendTransactionApiError": "トランザクション送信中にサーバーからエラーを受信しました。",
   "api.errors.sendTransactionError": "トランザクション送信中にAPI方式呼び出しからエラーを受信しました。",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "ウォレットを復元する",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "新規のヨロイウォレットを作成する時に発行された、15個の単語からなるヨロイの復元フレーズをお持ちでしたらこのオプションを選択してウォレットを復元できます。",
   "wallet.add.optionDialog.restore.normalWallet.title": "15単語の復元フレーズを入力する",
   "wallet.add.optionDialog.restore.paperWallet.description": "通常印刷してオフラインで保管するものですが、ヨロイのペーパーウォレットをお持ちの方はこのオプションを選択してペーパーウォレットの残高をヨロイウォレットにインポートすることができます。",
   "wallet.add.optionDialog.restore.paperWallet.title": "ペーパーウォレット",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "ウォレットを作成する",
   "wallet.add.page.create.tooltip": "新規に15単語からなる復元フレーズを生成し<br/>ヨロイウォレットを作成する",
   "wallet.add.page.daedalusTransfer.title": "ダイダロスウォレットからヨロイに資金を送金する",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardanoは世界初の安全性が実証されたプルーフオブステークプロトコルです",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "通貨またはプラットフォームを選択",
-  "wallet.dashboard.empty.text": "「シンプルステーキング」または「アドバンスステーキング」にアクセスし、委任を行うステークプールを選択してください。本テストネットでは1つのステークプールに対してのみ委任が可能です。",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "まだADAを委任していません",
   "wallet.dashboard.epochEndTitle": "エポック終了までの時間",
   "wallet.dashboard.epochProgress": "エポック進歩",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "収入",
   "wallet.dashboard.stakePool.cost": "コスト",
   "wallet.dashboard.stakePool.created": "作成",
-  "wallet.dashboard.stakePool.descriptionButton": "すべて表示",
+  "wallet.dashboard.stakePool.descriptionButton": "説明",
   "wallet.dashboard.stakePool.fullness": "ステークプールへの参加数の状況",
   "wallet.dashboard.stakePool.margins": "マージン",
   "wallet.dashboard.stakePool.performance": "パフォーマンス",
   "wallet.dashboard.stakePool.pledge": "ステーク額",
   "wallet.dashboard.stakePool.stake": "ステーク",
   "wallet.dashboard.stakePool.title": "ステークプールに委任しました",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "ADA合計額",
   "wallet.dashboard.summary.delegatedTitle": "委任合計額",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADAは修正可能です",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "選択されたウォレット({checksumTextPart})はテスト・デバッグ用です。",
   "wallet.debugwallet.explanation2": "このウォレットを使用すると問題が発生する可能性があります。<br />代わりに、新規のウォレットを作成しお使いください。",
   "wallet.debugwallet.explanation3": "このメッセージを予期していない場合は{contactSupportLink}。",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "エポックごとの獲得報酬額（現時点での見積額とします）:",
   "wallet.delegation.transaction.explanationLine1": "一度に委任できるステークプールは1つだけです",
   "wallet.delegation.transaction.explanationLine2": "委任するステークプールをいつでも変更できます",
   "wallet.delegation.transaction.explanationLine3": "委任はいつでもキャンセルできます",
   "wallet.delegation.transaction.generation": "トランザクション生成中",
-  "wallet.delegation.transaction.stakePoolHash": "ステークプールハッシュ",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "ステークプールネーム",
   "wallet.delegation.transaction.success.button.label": "ダッシュボードページ",
   "wallet.delegation.transaction.success.explanation": "ダッシュボードページからステークプールのステータスと次の報酬までの残り時間を確認できます",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "ペーパーウォレット",
   "wallet.nav.type.standard": "スタンダードウォレット",
   "wallet.nav.type.trezor": "Trezorウォレット",
-  "wallet.navigation.delegationAdvance": "委任（アドバンス）",
   "wallet.navigation.delegationDashboard": "ダッシュボード",
-  "wallet.navigation.delegationSimple": "委任（シンプル）",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "受信",
   "wallet.navigation.send": "送信",
   "wallet.navigation.transactions": "トランザクション",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "ヨロイペーパーウォレットを検証する",
   "wallet.restore.dialog.upgrade.noop": "ウォレットをアップグレードする必要がありませんでした。",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byronアカウントチェックサム",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "ウォレットのアカウントチェックサム：",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelleyアカウントチェックサム",
   "wallet.restore.dialog.verify.addressesLabel": "ウォレットのアドレス：",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "アカウントチェックサムとアイコンがお持ちのウォレットと一致していることをご確認ください。",
   "wallet.restore.dialog.verify.intro.line3": "アドレスがお持ちのウォレットと一致することをご確認ください。",
   "wallet.restore.dialog.verify.intro.line4": "誤った英語単語やペーパーウォレットパスワードを入力した場合、復元したいウォレットとは全く別の空のウォレットを復元してしまいます。その場合はアカウントチェックサムもアドレスも復元したかったウォレットと異なります。",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelleyウォレットアドレス：",
   "wallet.restore.dialog.verify.title": "復元したウォレットを検証する",
   "wallet.restore.dialog.verify.wallet.button.label": "ウォレットを検証する",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "手数料を計算中...",
   "wallet.send.form.cannotSendToLegacy": "2019年11月29日より前に生成された従来のウォレットアドレスに送金することができません",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "必要に応じてメッセージを追加することができます",
-  "wallet.send.form.description.label": "説明",
   "wallet.send.form.errors.invalidAddress": "有効なアドレスを入力してください。",
   "wallet.send.form.errors.invalidAmount": "有効な金額を入力してください。",
-  "wallet.send.form.errors.invalidTitle": "3文字以上のタイトルを入力してください。",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "ウォレットのアドレス",
   "wallet.send.form.receiver.label": "受信者",
   "wallet.send.form.sendAll.checkboxLabel": "{currency}を全て送信する",
   "wallet.send.form.sendingIsDisabled": "トランザクションが完了するまで別のトランザクションを行うことはできません。",
-  "wallet.send.form.title.hint": "例：フランク宛の資金",
-  "wallet.send.form.title.label": "タイトル",
   "wallet.send.form.transactionFeeError": "手数料に対する ADA が不足しています。送金額を減らして再度実行してください。",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Ledgerデバイスをお使いのコンピューターに接続してから「Ledgerを使って送信」ボタンを押してください。",
   "wallet.send.ledger.confirmationDialog.info.line.2": "プロセスの実行中は、Ledgerデバイス上にCardano ADAアプリを開いたままにしてください。",
