--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "서명이 잘못되었습니다.",
   "api.errors.noInputsError": "복구 구절에서 복구시킨 지갑이 비어 있습니다. 복구 구절을 확인하시고 복구를 다시 시도해주세요.",
   "api.errors.pendingTransactionError": "보류 중인 거래를 업데이트하는 중 오류가 발생했습니다.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "롤백이 감지되었습니다.",
   "api.errors.sendTransactionApiError": "거래를 전송하는 중 서버로부터 오류를 수신했습니다.",
   "api.errors.sendTransactionError": "거래를 전송하는 중 API 방식 호출로부터 오류를 수신했습니다.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "지갑 복구하기",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "만약 15 단어로 구성된 요로이 복구 구절을 가지고 있다면, 이 옵션을 통해 지갑을 복구하세요.",
   "wallet.add.optionDialog.restore.normalWallet.title": "15 단어 복구 구절 입력",
   "wallet.add.optionDialog.restore.paperWallet.description": "만약 요로이 종이 지갑을 생성했다면, 이 옵션을 통해 요로이 종이 지갑에서 자금을 가져올 수 있습니다.",
   "wallet.add.optionDialog.restore.paperWallet.title": "종이 지갑",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "지갑 생성",
   "wallet.add.page.create.tooltip": "새로운 15 단어 복구 구절을 생성하고 <br/> 요로이 지갑을 만들기",
   "wallet.add.page.daedalusTransfer.title": "다이달로스 지갑에서 요로이 지갑으로 자금 이체하기",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano is the first provably secure proof of stake protocol",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Pick a currency or platform",
-  "wallet.dashboard.empty.text": "간편 스테이킹 또는 고급 스테이킹을 선택하여 어떤 스테이킹 풀에 위임할지 고르세요. 단, 테스트넷에서는 오직 하나의 스테이킹 풀에만 위임이 가능합니다.",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "아직 ADA를 위임하지 않았습니다.",
   "wallet.dashboard.epochEndTitle": "에포크 종료까지 남은 시간",
   "wallet.dashboard.epochProgress": "에포크 진행 상황",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "수익",
   "wallet.dashboard.stakePool.cost": "비용",
   "wallet.dashboard.stakePool.created": "생성됨",
-  "wallet.dashboard.stakePool.descriptionButton": "상세 설명",
+  "wallet.dashboard.stakePool.descriptionButton": "설명",
   "wallet.dashboard.stakePool.fullness": "포화 정도",
   "wallet.dashboard.stakePool.margins": "마진",
   "wallet.dashboard.stakePool.performance": "성능",
   "wallet.dashboard.stakePool.pledge": "보증량",
   "wallet.dashboard.stakePool.stake": "위임",
   "wallet.dashboard.stakePool.title": "위임된 스테이킹 풀",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "누적 ADA",
   "wallet.dashboard.summary.delegatedTitle": "총 위임량",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA가 정정될 수 있습니다.",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "선택한 지갑({checksumTextPart})은 테스트 및 디버깅 용도입니다.",
   "wallet.debugwallet.explanation2": "해당 지갑을 사용시 문제가 발생할 수 있습니다.<br /> 대신, 새로운 요로이 지갑을 생성해 사용하세요.",
   "wallet.debugwallet.explanation3": "의도치 않게 이 메세지를 보고 계시다면, {contactSupportLink}로 연락해 주세요.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "에포크마다 받을 것으로 예상되는 보상의 양:",
   "wallet.delegation.transaction.explanationLine1": "하나의 풀에만 위임할 수 있습니다.",
   "wallet.delegation.transaction.explanationLine2": "언제나 다른 풀로 위임을 변경할 수 있습니다.",
   "wallet.delegation.transaction.explanationLine3": "언제나 위임을 취소할 수 있습니다.",
   "wallet.delegation.transaction.generation": "거래 생성",
-  "wallet.delegation.transaction.stakePoolHash": "스테이킹 풀 해시",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "스테이킹 풀 이름",
   "wallet.delegation.transaction.success.button.label": "대시보드 페이지",
   "wallet.delegation.transaction.success.explanation": "스테이킹 풀의 상태와 다음 보상까지의 남은 시간을 대시보드 페이지에서 가져옵니다.",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "종이 지갑",
   "wallet.nav.type.standard": "표준 지갑",
   "wallet.nav.type.trezor": "Trezor 지갑",
-  "wallet.navigation.delegationAdvance": "위임 (고급)",
   "wallet.navigation.delegationDashboard": "대시보드",
-  "wallet.navigation.delegationSimple": "위임 (간편)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "받기",
   "wallet.navigation.send": "보내기",
   "wallet.navigation.transactions": "거래",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "요로이 종이 지갑 검증",
   "wallet.restore.dialog.upgrade.noop": "당신의 지갑은 업그레이드 될 필요가 없습니다.",
   "wallet.restore.dialog.verify.accountId.byron.label": "바이런 계정 체크섬:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "지갑 계정 체크섬:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "쉘리 계정 체크섬:",
   "wallet.restore.dialog.verify.addressesLabel": "지갑 주소:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "계정 체크섬과 아이콘이 기억하고 있는 것과 일치하는지 확인하세요.",
   "wallet.restore.dialog.verify.intro.line3": "주소가 기억하고 있는것과 일치하는지 확인하세요.",
   "wallet.restore.dialog.verify.intro.line4": "만약 잘못된 연상 구절이나 지갑 암호를 입력한다면 다른 계정 체크섬과 주소를 가진 빈 지갑을 열게 됩니다.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "쉘리 지갑 주소[es]:",
   "wallet.restore.dialog.verify.title": "복원된 지갑 검증",
   "wallet.restore.dialog.verify.wallet.button.label": "지갑 검증",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "수수료 계산 중...",
   "wallet.send.form.cannotSendToLegacy": "레거시 주소 (2019년 11월 29일 이전에 생성된 주소)로는 전송할 수 없습니다.",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "원하는 메시지를 추가할 수 있습니다",
-  "wallet.send.form.description.label": "설명",
   "wallet.send.form.errors.invalidAddress": "정확한 주소를 입력하십시오.",
   "wallet.send.form.errors.invalidAmount": "정확한 금액을 입력하십시오.",
-  "wallet.send.form.errors.invalidTitle": "최소 3자 이상의 제목을 입력하십시오.",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "지갑 주소",
   "wallet.send.form.receiver.label": "받는 사람",
   "wallet.send.form.sendAll.checkboxLabel": "{currency} 를 모두 보내기",
   "wallet.send.form.sendingIsDisabled": "보류중인 거래가 있을때는 새로운 거래를 보낼수가 없습니다.",
-  "wallet.send.form.title.hint": "예: Money for Frank",
-  "wallet.send.form.title.label": "제목",
   "wallet.send.form.transactionFeeError": "수수료에 사용할 충분한 ADA가 없습니다. 더 적은 금액을 송금해 보십시오.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Ledger 지갑를 컴퓨터에 연결한 뒤, \"보내기\" 버튼을 눌러 주십시오.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "과정이 진행되는 동안 Ledger 장치의 Cardano ADA 앱이 열려있어야 합니다.",
