--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -25,12 +25,13 @@
   "api.errors.getTxsBodiesForUTXOsError": "Fout van de API methode bij het ophalen van \"TxBodies\".",
   "api.errors.getUtxosForAddressesApiError": "Serverfout bij het ophalen van de \"UTxO's\".",
   "api.errors.getUtxosSumsForAddressesApiError": "Serverfout bij het ophalen van de balans.",
-  "api.errors.hardwareUnsupportedError": "This hardware wallet is currently not supported.",
+  "api.errors.hardwareUnsupportedError": "Deze hardware portemonnee wordt momenteel nog niet ondersteund.",
   "api.errors.histoicalCoinPriceError": "Geschiedenis van de muntwaarde is nu niet beschikbaar.",
   "api.errors.invalidMnemonicError": "Foutieve herstelzin ingevoerd, controleer deze.",
   "api.errors.invalidWitnessError": "De ondertekening is ongeldig.",
   "api.errors.noInputsError": "De portemonnee, teruggezet met behulp van uw herstelzin, is leeg. Controleer de herstelzin en probeer het opnieuw.",
   "api.errors.pendingTransactionError": "Fout tijdens het vernieuwen van lopende transacties.",
+  "api.errors.poolMissingApiError": "Kon deze Stakepool niet vinden. Controleer de ID nogmaals en zorg ervoor dat de Stakepool niet is afgemeld.",
   "api.errors.rollbackApiError": "Terugdraaien is gedetecteerd.",
   "api.errors.sendTransactionApiError": "Serverfout tijdens het verzenden van een transactie.",
   "api.errors.sendTransactionError": "Fout ontvangen van de API methode tijdens het zenden van een transactie.",
@@ -109,7 +110,7 @@
   "global.language.portuguese": "Português",
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
-  "global.language.turkish": "Turkish",
+  "global.language.turkish": "Turks",
   "global.passwordInstructionsPaperWallet": "Opmerking: Het wachtwoord van een \"Papier\" Portemonnee moet uit minstens <strong>10 karakters</strong> bestaan.",
   "global.staleTxnWarningLine1": "Uw portemonnee is veranderd sinds het aanmaken van deze transactie.",
   "global.staleTxnWarningLine2": "U kunt deze transactie nog proberen te versturen maar het het kan fout gaan.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Een standaardportemonnee ondersteund door een herstelzin.",
   "wallet.add.optionDialog.create.paperWallet.description": "\"Papier\" portemonnees kunnen zelfs worden gemaakt op apparaten die niet zijn verbonden met internet, waardoor ze zeer geschikt zijn voor eenmalig gebruik in een koude opslag.",
   "wallet.add.optionDialog.restore.dialogTitle": "Herstel Portemonnee",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "Als uw herstelzin uit 24 woorden bestaat dan kiest u deze optie om uw portemonnee te herstellen.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Voer de 24 woorden van de herstelzin in",
   "wallet.add.optionDialog.restore.normalWallet.description": "Als u een Yoroi herstelzin heeft die bestaat uit 15 woorden die zijn gegenereerd toen u een Yoroi Portemonnee maakte, kiest u deze optie om uw Portemonnee te herstellen.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Geen een 15 woorden herstelzin in",
   "wallet.add.optionDialog.restore.paperWallet.description": "Als u een Yoroi \"Papier\" Portemonnee gegenereerd hebt (die meestal wordt afgedrukt en offline wordt bewaard), kunt u deze optie kiezen om het geld uit je Yoroi \"Papier\" Portemonnee te importeren.",
   "wallet.add.optionDialog.restore.paperWallet.title": "\"Papier\" Portemonnee",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Portefeuilles die vóór 29 juli 2020 zijn gemaakt, zijn nog uit het Byron-tijdperk en kunnen niet worden gedelegeerd.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-tijdperk Portemonnee (kan alleen gelezen worden)",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Kies een tijdperk",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-tijdperk portemonnees ondersteunen delegatie naar \"Stakepools\".",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-tijdperk portemonnee",
   "wallet.add.page.create.title": "Maak een Portemonnee",
   "wallet.add.page.create.tooltip": "Maak een nieuw 15 woorden herstelzin<br/>en een nieuwe Portemonnee aan.",
   "wallet.add.page.daedalusTransfer.title": "Overzetten van de inhoud van een Daedalus Portemonnee naar een Yoroi rekening",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano is het eerste, aantoonbaar veilige, \"proof of stake\"-protocol",
   "wallet.currency.pick.ergo": "Ergo bouwt geavanceerde cryptografische functies en radicaal nieuwe DeFi-functionaliteit op de solide basis die is gelegd door een decennium van blockchain-theorie en -ontwikkeling",
   "wallet.currency.pick.header": "Kies een valuta of een platform",
-  "wallet.dashboard.empty.text": "Ga naar Eenvoudig of Uitgebreid Stemmen om te kiezen in welke Stakepool u wilt delegeren. Let op, u mag in dit Testnet slechts aan één Stakepool delegeren",
+  "wallet.dashboard.empty.text": "Ga naar de delegatiepagina om uw Stakepool voor delegatie te kiezen.",
   "wallet.dashboard.empty.title": "U heeft uw ADA nog niet gedelegeerd",
   "wallet.dashboard.epochEndTitle": "Tijd tot einde periode",
   "wallet.dashboard.epochProgress": "Periode voortgang",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Opbrengst",
   "wallet.dashboard.stakePool.cost": "Kosten",
   "wallet.dashboard.stakePool.created": "Aangemaakt",
-  "wallet.dashboard.stakePool.descriptionButton": "Volledige beschrijving",
+  "wallet.dashboard.stakePool.descriptionButton": "Beschrijving",
   "wallet.dashboard.stakePool.fullness": "Volheid",
   "wallet.dashboard.stakePool.margins": "Marge",
   "wallet.dashboard.stakePool.performance": "Prestatie",
   "wallet.dashboard.stakePool.pledge": "Belofte",
   "wallet.dashboard.stakePool.stake": "Stem",
   "wallet.dashboard.stakePool.title": "Stakepool gedelegeerd",
+  "wallet.dashboard.stakePool.viewWebpage": "Bekijk de Stakepool web pagina",
   "wallet.dashboard.summary.adaTitle": "Totaal ADA",
   "wallet.dashboard.summary.delegatedTitle": "Totaal gedelegeerd",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA kan gecorrigeerd worden",
@@ -455,18 +464,20 @@
   "wallet.debugwallet.explanation1": "De portemonnee die u gekozen hebt ({checksumTextPart}) is voor test en opsporen van fouten.",
   "wallet.debugwallet.explanation2": "Om problemen te voorkomen gebruik deze Portemonnee niet,<br />\nU kunt beter, met het programma Yoroi, een nieuwe aanmaken.",
   "wallet.debugwallet.explanation3": "Als u deze tekst niet verwacht had, neem dan contact op met het support team: {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Foute Stakepool ID",
+  "wallet.delegation.poolInfo.fetching": "Ophalen van Stakepool informatie",
   "wallet.delegation.transaction.approximationLabel": "Huidige beloning volgens verwachting die u per tijdperk zal ontvangen:",
   "wallet.delegation.transaction.explanationLine1": "U kunt per keer maar naar 1 Stakepool delegeren",
   "wallet.delegation.transaction.explanationLine2": "U kunt op elk moment omschakelen naar een andere Stakepool",
   "wallet.delegation.transaction.explanationLine3": "U kunt uw delegatie op elk moment afbreken",
   "wallet.delegation.transaction.generation": "Aanmaken transactie",
-  "wallet.delegation.transaction.stakePoolHash": "Stakepool \"Hash\"",
+  "wallet.delegation.transaction.stakePoolHash": "Stakepool ID",
   "wallet.delegation.transaction.stakePoolName": "Stakepoolnaam",
   "wallet.delegation.transaction.success.button.label": "Overzichtspagina",
   "wallet.delegation.transaction.success.explanation": "Volg de status van de Stakepool en de resterende tijd om een ​​beloning te ontvangen via de Overzichtspagina",
   "wallet.delegation.transaction.success.title": "Met succes gedelegeerd",
-  "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine1": "De upgrade van het Shelley-protocol voegt een nieuw type Shelley-portefeuille toe dat delegatie ondersteunt.",
+  "wallet.deprecation.byronLine2": "Om uw ADA te delegeren, moet u upgraden naar een Shelley-portemonnee.",
   "wallet.hw.common.error.101": "Vereiste toestemming was niet gegeven door de gebruiker, Probeer het opnieuw.",
   "wallet.hw.ledger.common.error.101": "Operatie afgebroken op het Ledger apparaat.",
   "wallet.hw.ledger.common.error.102": "Operatie afgebroken door de gebruiker.",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "\"Papier\" Portemonnee",
   "wallet.nav.type.standard": "Standaard Portemonnee",
   "wallet.nav.type.trezor": "Trezor Portemonnee",
-  "wallet.navigation.delegationAdvance": "Delegeren (uitgebreid)",
   "wallet.navigation.delegationDashboard": "Overzichtspagina",
-  "wallet.navigation.delegationSimple": "Delegeren (Simpel)",
+  "wallet.navigation.delegationSimple": "Delegatie",
   "wallet.navigation.receive": "Ontvangen",
   "wallet.navigation.send": "Verzenden",
   "wallet.navigation.transactions": "Transacties",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Controleer Yoroi \"Papier\" Portemonnee",
   "wallet.restore.dialog.upgrade.noop": "Uw Portemonnee hoeft niet aangepast te worden",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron account controlegetal:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "I.T.N.-Rekening controlegetal:",
   "wallet.restore.dialog.verify.accountId.label": "Controlegetal van uw Portemonnee Account:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley account controlegetal:",
   "wallet.restore.dialog.verify.addressesLabel": "Uw \"Papier\" Portemonnee adres(sen):",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Zorg er voor dat het account controlegetal en het icoon overeenkomen met wat u zich herinnert.",
   "wallet.restore.dialog.verify.intro.line3": "Zorg ervoor dat adressen overeenkomen met wat u zich herinnert.",
   "wallet.restore.dialog.verify.intro.line4": "Als je een verkeerde herstelzin of een verkeerd wachtwoord voor een \"Papier\" Portemonnee hebt ingevoerd, is het mogelijk dat een andere, lege, Portemonnee met een verkeerd checksum en verkeerde adressen wordt geopend.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "I.T.N.-Portemonnee adres(sen):",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Portemonnee adres[sen]:",
   "wallet.restore.dialog.verify.title": "Controleer de herstelde Portemonnee",
   "wallet.restore.dialog.verify.wallet.button.label": "Controleer Portemonnee",
@@ -561,19 +573,14 @@
   "wallet.send.form.amount.equalsAda": "komt overeen met {amount} ADA",
   "wallet.send.form.calculatingFee": "Berekenen van de vergoeding...",
   "wallet.send.form.cannotSendToLegacy": "U kunt niet verzenden naar oude adressen (adressen, aangemaakt voor 29 november 2019)",
-  "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "U kunt een bericht toevoegen als u dat wilt",
-  "wallet.send.form.description.label": "Beschrijving",
+  "wallet.send.form.cannotSendToReward": "Je kunt niets versturen naar een \"beloning\" account",
   "wallet.send.form.errors.invalidAddress": "Voer alstublieft een geldig adres in.",
   "wallet.send.form.errors.invalidAmount": "Voer alstublieft een geldig bedrag in.",
-  "wallet.send.form.errors.invalidTitle": "Voer alstublieft een titel in van tenminste 3 karakters.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Kan niet minder dan {minUtxo} ADA verzenden.",
   "wallet.send.form.receiver.hint": "Portemonnee adres",
   "wallet.send.form.receiver.label": "Ontvanger",
   "wallet.send.form.sendAll.checkboxLabel": "Verstuur alles {currency}",
   "wallet.send.form.sendingIsDisabled": "Kan geen nieuwe transactie versturen als nog een lopende transactie  \"In afwachting\" is.",
-  "wallet.send.form.title.hint": "Voorbeeld: \"Betaling AnoekSj voor onkosten 30 juli\"",
-  "wallet.send.form.title.label": "Titel",
   "wallet.send.form.transactionFeeError": "Niet genoeg Ada voor de transactievergoeding. Probeer een lager bedrag te sturen.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Na uw Ledger apparaat op de USB poort te hebben aangesloten, druk op de \"Verbinden\" knop.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Zorg ervoor dat de Cardano Applicatie geopend blijft op het Ledger apparaat gedurende het proces.",
