--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "Подпись недействительна.",
   "api.errors.noInputsError": "Кошелек, восстановленный из Вашей фразы восстановления, пуст. Пожалуйста, проверьте Вашу фразу восстановления и повторите попытку восстановления снова.",
   "api.errors.pendingTransactionError": "Ошибка при обновлении ожидающих транзакций.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Кратковременное перестроение цепи.",
   "api.errors.sendTransactionApiError": "Получена ошибка от сервера при отправке транзакции.",
   "api.errors.sendTransactionError": "Получена ошибка при вызове метода api при отправке транзакции.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "Восстановить кошелек",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "Если у Вас есть фраза восстановления из 15 слов для Yoroi, сгенерированная при создании кошелька Yoroi, выберите этот вариант, чтобы восстановить свой кошелек.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Введите восстановительную фразу из 15 слов",
   "wallet.add.optionDialog.restore.paperWallet.description": "Если Вы создали бумажный кошелек Yoroi (который обычно печатается и хранится в офлайн), Вы можете выбрать этот вариант, чтобы импортировать средства из бумажного кошелька Yoroi.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Бумажный кошелек",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "Создать кошелек",
   "wallet.add.page.create.tooltip": "Сгенерируйте новую восстановительную фразу из 15 слов<br/>и создайте кошелек Yoroi.",
   "wallet.add.page.daedalusTransfer.title": "Перевести средства из Daedalus кошелька в Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano is the first provably secure proof of stake protocol",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Pick a currency or platform",
-  "wallet.dashboard.empty.text": "Перейдите в Простой или Расширенный стейкинг, чтобы выбрать стейк-пул в который вы хотите делегировать. Обратите внимание, что вы можете делегировать только в один стейк-пул в этом тестнете",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "Вы еще не делегировали вашу ADA",
   "wallet.dashboard.epochEndTitle": "Время до конца эпохи",
   "wallet.dashboard.epochProgress": "Прогресс эпохи",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Доход",
   "wallet.dashboard.stakePool.cost": "Стоимость",
   "wallet.dashboard.stakePool.created": "Создано",
-  "wallet.dashboard.stakePool.descriptionButton": "Полное описание",
+  "wallet.dashboard.stakePool.descriptionButton": "Описание",
   "wallet.dashboard.stakePool.fullness": "Заполненность",
   "wallet.dashboard.stakePool.margins": "Маржи",
   "wallet.dashboard.stakePool.performance": "Производительность",
   "wallet.dashboard.stakePool.pledge": "Залог",
   "wallet.dashboard.stakePool.stake": "Стейк",
   "wallet.dashboard.stakePool.title": "Делегировано в стейк-пул",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Всего ADA",
   "wallet.dashboard.summary.delegatedTitle": "Всего делегировано",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA можно исправить",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
   "wallet.debugwallet.explanation3": "If you did not expect this message, please {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Текущая приблизительная сумма награды, которую вы получите за эпоху:",
   "wallet.delegation.transaction.explanationLine1": "Вы можете делегировать только в один стейк-пул за раз",
   "wallet.delegation.transaction.explanationLine2": "Вы можете в любое время переключиться и делегировать в другой стейк-пул",
   "wallet.delegation.transaction.explanationLine3": "Вы можете отменить свое делегирование в любое время",
   "wallet.delegation.transaction.generation": "Генерация транзакции",
-  "wallet.delegation.transaction.stakePoolHash": "Хэш стейк-пула",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Имя стейк-пула",
   "wallet.delegation.transaction.success.button.label": "Информационная панель",
   "wallet.delegation.transaction.success.explanation": "Отслеживайте статус стейк-пула и оставшееся время для получения награды на странице Информационной панели",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Бумажный кошелек",
   "wallet.nav.type.standard": "Стандартный кошелек",
   "wallet.nav.type.trezor": "Кошелек Trezor",
-  "wallet.navigation.delegationAdvance": "Делегирование (Расширенное)",
   "wallet.navigation.delegationDashboard": "Кабинет",
-  "wallet.navigation.delegationSimple": "Делегирование (Простое)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Получить",
   "wallet.navigation.send": "Отправить",
   "wallet.navigation.transactions": "Транзакции",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Проверьте бумажный кошелек Yoroi",
   "wallet.restore.dialog.upgrade.noop": "Ваш кошелек не нуждается в обновлениях",
   "wallet.restore.dialog.verify.accountId.byron.label": "Контрольная сумма счета Byron:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "Контрольная сумма Вашего кошелька:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Контрольная сумма счета Shelley:",
   "wallet.restore.dialog.verify.addressesLabel": "Адрес[а] Вашего кошелька:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Убедитесь, что контрольная сумма и изображение соответствуют.",
   "wallet.restore.dialog.verify.intro.line3": "Убедитесь, что адреса соответствуют.",
   "wallet.restore.dialog.verify.intro.line4": "Если Вы ввели неверную мнемоническую фразу или неверный пароль бумажного кошелька - Вы просто откроете другой, пустой кошелек с неверной контрольной суммой аккаунта и неправильными адресами.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Адрес[а] кошелька Shelley:",
   "wallet.restore.dialog.verify.title": "Проверить восстановленный кошелек",
   "wallet.restore.dialog.verify.wallet.button.label": "Проверить кошелек",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Расчет комиссии...",
   "wallet.send.form.cannotSendToLegacy": "Вы не делать переводы на старые адреса (любые адреса, которые были созданы до 29-го ноября 2019 года)",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "Вы можете добавить сообщение",
-  "wallet.send.form.description.label": "Описание",
   "wallet.send.form.errors.invalidAddress": "Пожалуйста, введите действительный адрес.",
   "wallet.send.form.errors.invalidAmount": "Пожалуйста, введите правильную сумму.",
-  "wallet.send.form.errors.invalidTitle": "Пожалуйста, введите название минимум с 3 символами.",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Адрес кошелька",
   "wallet.send.form.receiver.label": "Получатель",
   "wallet.send.form.sendAll.checkboxLabel": "Отправить все {currency}",
   "wallet.send.form.sendingIsDisabled": "Невозможно совершить новую транзакцию пока текущая не завершена.",
-  "wallet.send.form.title.hint": "Например: Деньги для Фрэнка",
-  "wallet.send.form.title.label": "Название",
   "wallet.send.form.transactionFeeError": "Недостаточно Ada для оплаты комиссии. Попробуйте отправить меньшую сумму.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "После подключения устройства Ledger к своему компьютеру, нажмите Отправить, используя кнопку Ledger.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Убедитесь, что приложение Cardano ADA остается открытым на устройстве Ledger в течении всего процесса.",
