--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "İmza geçersiz.",
   "api.errors.noInputsError": "İyileştirme tümceciğinizden yeniden yüklenen cüzdan boş. Lütfen İyileştirme tümceciğinizi kontrol edin ve geri yüklemeyi tekrar deneyin.",
   "api.errors.pendingTransactionError": "Bekleyen işlemler güncellenirken hata oluştu.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Geri alma algılandı.",
   "api.errors.sendTransactionApiError": "İşlem gönderilirken sunucudan hata alındı.",
   "api.errors.sendTransactionError": "İşlem gönderilirken api çağrı yönteminden hata alındı.",
@@ -211,7 +212,7 @@
   "settings.menu.blockchain.link.label": "Blokzincir",
   "settings.menu.externalStorage.link.label": "Not Hafızası",
   "settings.menu.general.link.label": "Genel",
-  "settings.menu.levelOfComplexity.link.label": "Zorluk Seviyesi",
+  "settings.menu.levelOfComplexity.link.label": "Arayüz",
   "settings.menu.support.link.label": "Destek / Günlükler",
   "settings.menu.termsOfUse.link.label": "Kullanım şartları",
   "settings.menu.wallet.link.label": "Cüzdan",
@@ -254,9 +255,9 @@
   "settings.support.faq.faqLinkURL": "https://yoroi-wallet.com/faq/",
   "settings.support.faq.supportRequestLinkURL": "https://yoroi-wallet.com/support/",
   "settings.support.faq.title": "Sıkça sorulan sorular",
-  "settings.support.logs.content": "Kayıtları incelemek istiyorsanız, buradan {downloadLogsLink} indirebilirsiniz. Bu kayıtlar hassas bilgi içermez ve bu kayıtlar, destek ekibimizin sorunlarınızı araştırma ve çözme de büyük kolaylık sağlar. Bu kayıtları göndermeniz sizin için yararlı olacaktır.",
+  "settings.support.logs.content": "Kayıtları incelemek istiyorsanız, {downloadLogsLink}. Bu kayıtlar hassas bilgi içermez ve bu kayıtlar, destek ekibimizin sorunlarınızı, araştırma ve çözme de büyük kolaylık sağlar. Bu kayıtları göndermeniz sizin için yararlı olacaktır.",
   "settings.support.logs.downloadLogsButtonLabel": "Kayıtları İndir",
-  "settings.support.logs.downloadLogsLink": "onları buradan indir",
+  "settings.support.logs.downloadLogsLink": "buradan indirebilirsiniz",
   "settings.support.logs.title": "Kayıtlar",
   "settings.support.reportProblem.content": "Eğer SSS bölümü, sorununuzu çözemiyorsa, lütfen {supportRequestLink} bölümünü kullanın.",
   "settings.support.reportProblem.link": "Destek talebi",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Kurtarma metniyle desteklenen standart bir cüzdan.",
   "wallet.add.optionDialog.create.paperWallet.description": "Kağıt cüzdanlar, internete bağlı olmayan cihazlarda bile tek kullanımlık soğuk depolamaya uygun hale getirilebilir.",
   "wallet.add.optionDialog.restore.dialogTitle": "Cüzdanı geri yükle",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "24 kelimeden oluşan bir kurtarma ifadeniz varsa, cüzdanınızı geri yüklemek için bu seçeneği kullanın.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "24 sözcükten oluşan kurtarma sözcüklerinizi girin",
   "wallet.add.optionDialog.restore.normalWallet.description": "Bir Yoroi Cüzdanı oluşturduğunuzda size verilen 15 sözcükten oluşan kurtarma sözcükleriniz varsa, Cüzdanınızı geri yüklemek için bu yöntemi seçebilirsiniz.",
   "wallet.add.optionDialog.restore.normalWallet.title": "15 sözcükten oluşan kurtarma sözcüklerinizi girin",
   "wallet.add.optionDialog.restore.paperWallet.description": "Bir Yoroi Kağıt Cüzdan oluşturduysanız (genellikle yazdırılır ve çevrimdışı tutulur), Yoroi kağıt cüzdanınızdan para aktarmak için bu yöntemi seçebilirsiniz.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Kağıt Cüzdan",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "29 Temmuz 2020'den önce oluşturulan cüzdanlar Byron dönemi cüzdanlarıdır ve devredilemez.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron dönemi (salt okunur) cüzdan",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Dönem seçin",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley dönemi cüzdanları, stake havuzları için delegasyonu destekler.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley dönemi cüzdanı",
   "wallet.add.page.create.title": "Cüzdan oluştur",
   "wallet.add.page.create.tooltip": "Yeni bir 15 kelimelik kurtarma metni oluşturun <br/>ve bir Yoroi cüzdanı oluşturun.",
   "wallet.add.page.daedalusTransfer.title": "Bir Daedalus cüzdanından Yoroi'ye para transferi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano, hisse ispatının ilk kanıtlanabilir protokolüdür",
   "wallet.currency.pick.ergo": "Ergo, on yıllık blockchain teorisi ve gelişiminin getirdiği çok sağlam temeller üzerinde gelişmiş şifreleme özellikleri ve radikal olarak yeni DeFi işlevselliği oluşturuyor",
   "wallet.currency.pick.header": "Bir para birimi veya platform seçin",
-  "wallet.dashboard.empty.text": "Hangi bahis havuzuna temsil etmek istediğinizi seçmek için Basit veya Gelişmiş Bahis'e gidin. Not, Testnet üzerinde yalnızca bir bahis havuzuna yetki verebilirsiniz",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "ADA'nızı henüz devretmediniz",
   "wallet.dashboard.epochEndTitle": "Dönem sonuna kadar geçen süre",
   "wallet.dashboard.epochProgress": "Dönem gelişimi",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Gelir",
   "wallet.dashboard.stakePool.cost": "Masraf",
   "wallet.dashboard.stakePool.created": "Oluşturuldu",
-  "wallet.dashboard.stakePool.descriptionButton": "Tam açıklama",
+  "wallet.dashboard.stakePool.descriptionButton": "Açıklama",
   "wallet.dashboard.stakePool.fullness": "Doluluk",
   "wallet.dashboard.stakePool.margins": "Paylar",
   "wallet.dashboard.stakePool.performance": "Performans",
   "wallet.dashboard.stakePool.pledge": "Taahhüt",
   "wallet.dashboard.stakePool.stake": "Bahis",
   "wallet.dashboard.stakePool.title": "Yetkilendirilmiş Bahis Hazuvu",
+  "wallet.dashboard.stakePool.viewWebpage": "Havuz web sayfasına gözat",
   "wallet.dashboard.summary.adaTitle": "Toplam ADA",
   "wallet.dashboard.summary.delegatedTitle": "Toplam Yetkilendirilenler",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA doğrulanabilir",
@@ -455,18 +464,20 @@
   "wallet.debugwallet.explanation1": "Seçtiğiniz cüzdan ({checksumTextPart}) test & hata ayıklama içindir.",
   "wallet.debugwallet.explanation2": "Herhangi bir sorunu önlemek için bu cüzdanı kullanmayın. <br /> Bunun yerine yeni bir cüzdan oluşturmak için Yoroi'yi kullanın.",
   "wallet.debugwallet.explanation3": "Eğer bu mesajı beklemediyseniz, lütfen {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Geçersiz havuz kimliği",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Dönem başına alacağınız ödüllerin tahmini değeri:",
   "wallet.delegation.transaction.explanationLine1": "Bir seferde yalnızca bir bahis havuzuna yetki verebilirsiniz",
   "wallet.delegation.transaction.explanationLine2": "İstediğiniz zaman farklı bir bahis havuzuna yetkilendirme yapabilirsiniz",
   "wallet.delegation.transaction.explanationLine3": "Yetkilendirmenizi istediğiniz zaman iptal edebilirsiniz",
   "wallet.delegation.transaction.generation": "İşlem oluşturuluyor",
-  "wallet.delegation.transaction.stakePoolHash": "Hisse havuzu hash'i",
+  "wallet.delegation.transaction.stakePoolHash": "Bahis havuzu kimliği",
   "wallet.delegation.transaction.stakePoolName": "Hisse havuzu adı",
   "wallet.delegation.transaction.success.button.label": "Panel sayfası",
   "wallet.delegation.transaction.success.explanation": "Bahis havuzunun durumunu ve Gösterge Tablosu sayfasından bir ödül almak için kalan süreyi izleyiniz",
   "wallet.delegation.transaction.success.title": "Başarıyla yetkilendirildi",
-  "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine1": "Shelley protokol yükseltmesi, temsilciliği destekleyen yeni bir Shelley cüzdan türü ekler.",
+  "wallet.deprecation.byronLine2": "ADA'nıza yetki vermek için Shelley cüzdanına geçmeniz gerekecektir.",
   "wallet.hw.common.error.101": "Kullanıcı tarafından gerekli izinler verilmedi. Lütfen tekrar deneyiniz.",
   "wallet.hw.ledger.common.error.101": "Operasyon Ledger aygıtında iptal edildi.",
   "wallet.hw.ledger.common.error.102": "Operasyon kullanıcı tarafından iptal edildi.",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Kağıt cüzdan",
   "wallet.nav.type.standard": "Standart cüzdan",
   "wallet.nav.type.trezor": "Trezor cüzdan",
-  "wallet.navigation.delegationAdvance": "Yetkilendirme (Gelişmiş)",
   "wallet.navigation.delegationDashboard": "Kontrol Paneli",
-  "wallet.navigation.delegationSimple": "Yetkilendirme (Basit)",
+  "wallet.navigation.delegationSimple": "Delegasyon",
   "wallet.navigation.receive": "Alıcı",
   "wallet.navigation.send": "Gönder",
   "wallet.navigation.transactions": "İşlemler",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Yoroi Kağıt Cüzdanını Doğrula",
   "wallet.restore.dialog.upgrade.noop": "Cüzdanınızın yükseltilmesine gerek yok",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron hesap sağlaması:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN hesap sağlaması:",
   "wallet.restore.dialog.verify.accountId.label": "Cüzdanının Hesap doğruluğu:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley hesap sağlaması:",
   "wallet.restore.dialog.verify.addressesLabel": "Cüzdan adres[ler]iniz:\nCüzdan adres[es]iniz:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Hesap sağlamasının ve simgesinin hatırladığınızla eşleştiğinden emin olun.",
   "wallet.restore.dialog.verify.intro.line3": "Adreslerin hatırladığınızla eşleştiğinden emin olun.",
   "wallet.restore.dialog.verify.intro.line4": "Yanlış anımsatıcılar veya yanlış bir kağıt cüzdan şifresi girdiyseniz - sadece yanlış hesap sağlama ve yanlış adresleri olan başka bir boş cüzdan açarsınız.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Cüzdan Adresleri:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Cüzdan adres[ler]iniz:\nShelley Cüzdan adres[es]iniz:",
   "wallet.restore.dialog.verify.title": "Geri Yüklenen Cüzdanı Onayla",
   "wallet.restore.dialog.verify.wallet.button.label": "Cüzdanı doğrula",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Ücret hesaplanıyor...",
   "wallet.send.form.cannotSendToLegacy": "Eski adreslere gönderemezsiniz (29 Kasım 2019 tarihinden önce oluşturulmuş herhangi bir adres)",
   "wallet.send.form.cannotSendToReward": "Bir ödül hesabına gönderemezsiniz",
-  "wallet.send.form.description.hint": "İsterseniz bir mesaj ekleyebilirsiniz",
-  "wallet.send.form.description.label": "Açıklama",
   "wallet.send.form.errors.invalidAddress": "Lütfen geçerli bir adres girin.",
   "wallet.send.form.errors.invalidAmount": "Lütfen geçerli bir miktar girin.",
-  "wallet.send.form.errors.invalidTitle": "Lütfen en az 3 karakterden oluşan bir başlık girin.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "{MinUtxo} ADA'dan daha az gönderilemiyor.",
   "wallet.send.form.receiver.hint": "Cüzdan Adresi",
   "wallet.send.form.receiver.label": "Alıcı",
   "wallet.send.form.sendAll.checkboxLabel": "Tümünü gönder {currency}",
   "wallet.send.form.sendingIsDisabled": "Mevcut bir işlem henüz beklemedeyken yeni bir işlem gönderilemiyor.",
-  "wallet.send.form.title.hint": "Ör. Frank için Para",
-  "wallet.send.form.title.label": "Başlık",
   "wallet.send.form.transactionFeeError": "Ücretler için Ada yeterli değil. Daha küçük bir miktar göndermeyi deneyin.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Ledger cihazınızı bilgisayarınızın USB bağlantı noktasına bağladıktan sonra Ledger düğmesini kullanarak gönder tuşuna basın.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "İşlem boyunca Cardano ADA uygulamasının Ledger cihazında açık olduğundan emin olun.",
