--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "Die Signatur ist ungültig.",
   "api.errors.noInputsError": "Die wiederhergestellte Wallet ist leer. Bitte überprüfe die Wiederherstellungs-Phrase und versuche es noch einmal.",
   "api.errors.pendingTransactionError": "Fehler beim Aktualisieren der ausstehenden Transaktionen.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Ein Rollback wurde erkannt.",
   "api.errors.sendTransactionApiError": "Fehler vom Server beim Senden der Transaktion.",
   "api.errors.sendTransactionError": "Fehler von der API beim Senden der Transaktion.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Ein Standard Wallet durch einen Wiederherstellungssatz geschützt.",
   "wallet.add.optionDialog.create.paperWallet.description": "Papier-Wallets können auch auf Geräten erstellt werden, die nicht mit dem Internet verbunden sind, wodurch sie sich gut für die exklusive Kalt-Lagerung (cold storage) eignen.",
   "wallet.add.optionDialog.restore.dialogTitle": "Wallet wiederherstellen",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "Wenn Du eine Wiederherstellungs-Satz bestehend aus 24 Wörtern hast, wähle diese Option um Dein Wallet herzustellen.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Geben Sie einen Wiederherstellungssatz mit 24 Wörtern ein",
   "wallet.add.optionDialog.restore.normalWallet.description": "Wähle diese Option um Deine Wallet wiederherzustellen, wenn Du einen Yoroi Wiederherstellungs-Satz bestehend aus 15 Wörtern hast, der generiert wurde als Du Deine Yoroi Wallet erstmals eingerichtet hast.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Gib einen aus 15 Wörtern bestehenden Wiederherstellungssatz ein",
   "wallet.add.optionDialog.restore.paperWallet.description": "Wähle diese Option wenn Du eine Yoroi paper wallet erstellt hast (diese wird normalerweise ausgedruckt und offline aufbewahrt) um Deine Geldbeträge vom Yoroi Paper Wallet zu importieren.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets, die vor dem 29. Juli 2020 erstellt wurden, sind Wallets aus der Byron-Ära und können nicht delegiert werden.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-Ära (nur lesen) Wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Wähle die Ära",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-Ära Wallets unterstützen das Delegieren an Stake-Pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-Ära Wallet",
   "wallet.add.page.create.title": "Wallet erstellen",
   "wallet.add.page.create.tooltip": "Generiere einen neuen 15-Wort Wiederherstellungs-Satz<br/>und erstelle eine Yoroi wallet.",
   "wallet.add.page.daedalusTransfer.title": "Übertrage Guthaben von einer Daedalus Wallet nach Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano ist das erste nachweislich sichere Proof-of-Stake Protokoll",
   "wallet.currency.pick.ergo": "Ergo baut fortschrittliche kryptografische Funktionen und radikal neue DeFi-Funktionalität auf einem felsenfesten Fundament, das durch ein Jahrzehnt der Blockchain-theorie und -entwicklung gelegt wurde",
   "wallet.currency.pick.header": "Wähle eine Währung oder Plattform",
-  "wallet.dashboard.empty.text": "Verwende das Einfache oder Erweiterte Staking, um auszuwählen, an welchem Stakepool Du delegieren möchtest. Hinweis: Du kannst nur an einen Stakeholder-Pool in diesem Testnetz delegieren",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "Du hast noch keine ADA delegiert",
   "wallet.dashboard.epochEndTitle": "Zeit bis zum Ende der Epoche",
   "wallet.dashboard.epochProgress": "Epochen Fortschritt",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Erlöse",
   "wallet.dashboard.stakePool.cost": "Kosten",
   "wallet.dashboard.stakePool.created": "Erstellt",
-  "wallet.dashboard.stakePool.descriptionButton": "Vollständige Beschreibung",
+  "wallet.dashboard.stakePool.descriptionButton": "Beschreibung",
   "wallet.dashboard.stakePool.fullness": "Vollständigkeit",
   "wallet.dashboard.stakePool.margins": "Gewinnspanne",
   "wallet.dashboard.stakePool.performance": "Leistung",
   "wallet.dashboard.stakePool.pledge": "Pfand",
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Delegierter Stake Pool",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "ADA insgesamt",
   "wallet.dashboard.summary.delegatedTitle": "Insgesamt delegiert",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA kann korrigiert werden",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "Die ausgewählte Wallet ({checksumTextPart}) ist für Tests und Fehlerbehebung gedacht.",
   "wallet.debugwallet.explanation2": "Um Probleme zu vermeiden, solltest du diese Wallet nicht verwenden. <br />Erstelle statt dessen in Yoroi eine neue Wallet.",
   "wallet.debugwallet.explanation3": "Wenn diese Nachricht unerwartet ist, wende dich bitte an {contactSupportLink}",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Derzeitige Schätzung der Erträge, die Du pro Epoche erhalten wirst:",
   "wallet.delegation.transaction.explanationLine1": "Du kannst nur zu einem Pool gleichzeitig delegieren",
   "wallet.delegation.transaction.explanationLine2": "Du kannst jederzeit zu einem anderen Stake pool delegieren",
   "wallet.delegation.transaction.explanationLine3": "Du kannst die Delegierung jederzeit entfernen",
   "wallet.delegation.transaction.generation": "Transaktion vorbereiten",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool hash",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Stake pool name",
   "wallet.delegation.transaction.success.button.label": "Übersichtsseite",
   "wallet.delegation.transaction.success.explanation": "In der Übersichtsseite kannst Du den Status des Stake pools verfolgen, und die verbleibende Zeit, um eine Belohnung zu erhalten",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Papier Wallet",
   "wallet.nav.type.standard": "Standard Wallet",
   "wallet.nav.type.trezor": "Trezor Wallet",
-  "wallet.navigation.delegationAdvance": "Delegierung (Erweitert)",
   "wallet.navigation.delegationDashboard": "Übersichtsseite",
-  "wallet.navigation.delegationSimple": "Delegierung (Einfach)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Empfangen",
   "wallet.navigation.send": "Senden",
   "wallet.navigation.transactions": "Transaktionen",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Überprüfe eine Yoroi Paper Wallet",
   "wallet.restore.dialog.upgrade.noop": "Deine Wallet muss nicht aufgerüstet werden",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron Konto Prüfsumme:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN Konto Checksumme:",
   "wallet.restore.dialog.verify.accountId.label": "Deine Wallet Konto-Prüfsumme:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley Konto Prüfsumme:",
   "wallet.restore.dialog.verify.addressesLabel": "Deine Wallet-Adresse[n]:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Vergewissere Dich, dass die Konto-Prüfsumme und das Icon dem entspricht, was Du dir gemerkt hast.",
   "wallet.restore.dialog.verify.intro.line3": "Vergewissere Dich, dass die Adressen jene sind, die Du dir aufgeschrieben hast.",
   "wallet.restore.dialog.verify.intro.line4": "Wenn Du ungültige mnemonics oder das falsche Paper Wallet Passwort eingegeben hast, wird sich lediglich eine leere Wallet mit ungültiger Konto-ID und Adressen öffnen.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet Adresse[n]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Wallet-Adresse[n]:",
   "wallet.restore.dialog.verify.title": "Überprüfe die wiederhergestellte Wallet",
   "wallet.restore.dialog.verify.wallet.button.label": "Überprüfe eine Wallet",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Berechne Gebühr...",
   "wallet.send.form.cannotSendToLegacy": "Sie können nicht an alte Adressen senden (Adressen, die vor dem 29. November 2019 erstellt wurden)",
   "wallet.send.form.cannotSendToReward": "Du kannst nicht an ein Ertrags-Konto senden",
-  "wallet.send.form.description.hint": "Falls gewünscht, kannst du eine Nachricht hinzufügen",
-  "wallet.send.form.description.label": "Beschreibung",
   "wallet.send.form.errors.invalidAddress": "Bitte eine gültige Adresse eingeben.",
   "wallet.send.form.errors.invalidAmount": "Bitte einen gültigen Betrag eingeben.",
-  "wallet.send.form.errors.invalidTitle": "Bitte einen Titel mit mindestens 3 Zeichen eingeben.",
   "wallet.send.form.errors.tooSmallUtxo": "Es ist nicht möglich weniger als {minUtxo} ADA zu senden.",
   "wallet.send.form.receiver.hint": "Wallet-Adresse",
   "wallet.send.form.receiver.label": "Empfänger",
   "wallet.send.form.sendAll.checkboxLabel": "Sende alle {currency}",
   "wallet.send.form.sendingIsDisabled": "Es kann keine neue Transaktion gesendet werden, solange noch eine bestehende aussteht.",
-  "wallet.send.form.title.hint": "z.B. Geld für Frank",
-  "wallet.send.form.title.label": "Titel",
   "wallet.send.form.transactionFeeError": "Nicht genug ADA für die Gebühren. Versuche einen kleineren Betrag zu senden.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Nachdem dein Ledger mit dem USB-Port deines Computers verbunden ist, klicke auf die Schaltfläche 'Senden über Ledger'.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Sorge dafür, dass die Cardano ADA-App auf dem Ledger-Gerät während des Prozesses durchweg geöffnet bleibt.",
