--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "Η υπογραφή δεν ισχύει.",
   "api.errors.noInputsError": "Το πορτοφόλι που επαναφέρατε από τη φράση ανάκτησης είναι άδειο. Παρακαλώ ελέγξτε τη φράση ανάκτησης σας και προσπαθήστε ξανά.",
   "api.errors.pendingTransactionError": "Σφάλμα τη στιγμή ενημέρωσης συναλλαγών που είναι εκκρεμείς.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback was detected.",
   "api.errors.sendTransactionApiError": "Παρελήφθη σφάλμα από τον διακομιστή τη στιγμή αποστολής της συναλλαγής.",
   "api.errors.sendTransactionError": "Παρελήφθη σφάλμα στη κλήση μεθόδου ΔΠΕ (Διεπαφή προγραμματισμού εφαρμογών), τη στιγμή αποστολής συναλλαγής.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Ενα προδιαγεγραμμένο πορτοφόλι που υποστηρίζεται από μία φράση ανάκτησης.",
   "wallet.add.optionDialog.create.paperWallet.description": "Τα έντυπα πορτοφόλια μπορούν να δημιουργηθούν ακόμη και σε συσκευές που δεν είναι συνδεδεμένες στο διαδίκτυο κάτι που τις κάνει πολύ κατάλληλες για \"κρυα\" αποθήκευση μίας χρήσης.",
   "wallet.add.optionDialog.restore.dialogTitle": "Επαναφορά πορτοφολιού",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "Αν έχετε μία Yoroi φράση ανάκτησης αποτελούμενη από 15 λέξεις που παράχθηκε όταν δημιουργήσατε ένα Yoroi Πορτοφόλι, επιλέξτε αυτή την επιλογή για να επαναφέρετε το πορτοφόλι σας.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Εισάγετε μία φράση ανάκτησης 15 λέξεων",
   "wallet.add.optionDialog.restore.paperWallet.description": "Εάν έχετε δημιουργήσει ένα έντυπο πορτοφόλι Yoroi (το οποίο συνήθως εκτυπώνεται και κρατείται εκτός σύνδεσης), μπορείτε να επιλέξετε αυτή την επιλογή για να εισάγετε χρήματα από το έντυπο Yoroi πορτοφόλι σας.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Έντυπο Πορτοφόλι",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "Δημιουργήστε πορτοφόλι",
   "wallet.add.page.create.tooltip": "Παράγετε μία νέα φράση ανάκτησης 15 λέξεων<br/>και δημιουργήστε ένα Yoroi πορτοφόλι.",
   "wallet.add.page.daedalusTransfer.title": "Μεταφέρετε χρήματα απο το Daedalus πορτοφόλι στο Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Το Cardano είναι το πρώτο αποδεδειγμένα ασφαλές με τεκμηρίωση μεριδίου πρωτόκολλο",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Επιλέξτε ένα νόμισμα ή πλατφόρμα",
-  "wallet.dashboard.empty.text": "Go to Simple or Advance Staking to choose what stake pool you want to delegate in. Note, you may delegate only to one stake pool in this Tesnnet",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Revenue",
   "wallet.dashboard.stakePool.cost": "Cost",
   "wallet.dashboard.stakePool.created": "Created",
-  "wallet.dashboard.stakePool.descriptionButton": "Full description",
+  "wallet.dashboard.stakePool.descriptionButton": "Περιγραφή",
   "wallet.dashboard.stakePool.fullness": "Fullness",
   "wallet.dashboard.stakePool.margins": "Margins",
   "wallet.dashboard.stakePool.performance": "Performance",
   "wallet.dashboard.stakePool.pledge": "Pledge",
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegated",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA can be corrected",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "Το πορτοφόλι που επιλέξατε ({checksumTextPart}) είναι για δοκιμές και αποσφαλμάτωση.",
   "wallet.debugwallet.explanation2": "Για να αποφύγετε οποιαδήποτε ζητήματα, μην χρησιμοποιείται αυτό το πορτοφόλι.<br />αντ'αυτού, χρησιμοποιήστε το Yoroi για να δημιουργήσετε ένα νέο πορτοφόλι.",
   "wallet.debugwallet.explanation3": "Εάν δεν περιμένατε αυτό το μήνυμα, παρακαλώ {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Current approximation of rewards that you will receive per epoch:",
   "wallet.delegation.transaction.explanationLine1": "You can only delegate to one stake pool at a time",
   "wallet.delegation.transaction.explanationLine2": "You can switch to delegate to a different stake pool at any time",
   "wallet.delegation.transaction.explanationLine3": "You can cancel your delegation at any time",
   "wallet.delegation.transaction.generation": "Generating transaction",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool hash",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Stake pool name",
   "wallet.delegation.transaction.success.button.label": "Dashboard page",
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Paper wallet",
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
-  "wallet.navigation.delegationAdvance": "Delegation (Advance)",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delegation (Simple)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Αποδοχή",
   "wallet.navigation.send": "Αποστολή",
   "wallet.navigation.transactions": "Συναλλαγές",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Επιβεβαίωση Έντυπου Πορτοφολιού Yoroi",
   "wallet.restore.dialog.upgrade.noop": "Your wallet did not need to be upgraded",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron account checksum:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "Checksum του λογαριασμού Πορτοφολιού σας:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley account checksum:",
   "wallet.restore.dialog.verify.addressesLabel": "Διεύθυνση[εις] του Πορτοφολιού σας:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Να είστε σίγουροι οτι το checksum λογαριασμού και εικονίδιο ταιριάζουν με ότι θυμόσαστε.",
   "wallet.restore.dialog.verify.intro.line3": "Να είστε σίγουροι οτι οι διευθύνσεις ταιριάζουν με ότι θυμόσαστε.",
   "wallet.restore.dialog.verify.intro.line4": "Εάν έχετε εισάγει λάθος μνημονικούς κανόνες ή λάθος κωδικό έντυπου πορτοφολιού - απλά θα ανοίξετε ένα άλλο άδειο πορτοφόλι με λάθος checksum λογαριασμού και λάθος διευθύνσεις.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Wallet address[es]:",
   "wallet.restore.dialog.verify.title": "Επιβεβαίωση Επαναφερόμενου Πορτοφολιού",
   "wallet.restore.dialog.verify.wallet.button.label": "Επιβεβαίωση πορτοφολιού",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Υπολογισμός προμήθειας...",
   "wallet.send.form.cannotSendToLegacy": "You cannot send to legacy addresses (any address created before November 29th, 2019)",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "Μπορείτε να προσθέσετε ένα μήνυμα αν θέλετε",
-  "wallet.send.form.description.label": "Περιγραφή",
   "wallet.send.form.errors.invalidAddress": "Παρακαλώ εισάγετε μία έγκυρη διεύθυνση.",
   "wallet.send.form.errors.invalidAmount": "Παρακαλώ εισάγετε ένα έγκυρο ποσό.",
-  "wallet.send.form.errors.invalidTitle": "Παρακαλώ εισάγετε ένα τίτλο με τουλάχιστον 3 χαρακτήρες.",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Διεύθυνση Πορτοφολιού",
   "wallet.send.form.receiver.label": "Αποδέκτης",
   "wallet.send.form.sendAll.checkboxLabel": "Αποστολή όλων {currency}",
   "wallet.send.form.sendingIsDisabled": "Αδυναμία αποστολής νέας συναλλαγής όταν μία υπάρχουσα ακόμη εκρεμμεί.",
-  "wallet.send.form.title.hint": "Π.χ. Χρήματα για τον Φρανκ",
-  "wallet.send.form.title.label": "Τίτλος",
   "wallet.send.form.transactionFeeError": "Δεν υπάρχουν αρκετά Ada για τις προμήθειες. Προσπαθήστε να στείλετε ένα μικρότερο ποσό.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Αφού συνδέσετε τη Ledger συσκευή σας στη θύρα USB του υπολογιστή, πιέστε Αποστολή χρησιμοποιώντας το κουμπί απο Ledger.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Να είστε σίγουροι ότι η εφαρμογή Cardano ADA παραμένει ανοιχτή στη Ledger συσκευή κατά τη διάρκεια της διαδικασίας.",
