--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -25,12 +25,13 @@
   "api.errors.getTxsBodiesForUTXOsError": "Error recibido de la llamada a la API al intentar obtener los TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Error recibido del servidor al obtener los UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Error recibido del servidor al obtener el saldo.",
-  "api.errors.hardwareUnsupportedError": "Esta billetera de hardware no está aceptada por el momento.",
+  "api.errors.hardwareUnsupportedError": "Por el momento, esta billetera de hardware no está soportada.",
   "api.errors.histoicalCoinPriceError": "Los datos históricos sobre el precio de la moneda no están disponibles en este momento.",
   "api.errors.invalidMnemonicError": "La frase de recuperación ingresada es inválida. Por favor, verifica que sea la correcta.",
   "api.errors.invalidWitnessError": "La firma es inválida.",
   "api.errors.noInputsError": "La billetera restaurada a partir de tu frase de recuperación está vacía. Por favor, verifica tu frase de recuperación, e intenta restaurar la billetera nuevamente.",
   "api.errors.pendingTransactionError": "Error al actualizar las transacciones pendientes.",
+  "api.errors.poolMissingApiError": "No se pudo localizar este stake pool. Revisa su ID y asegúrate de que no fue dado de baja.",
   "api.errors.rollbackApiError": "Se detectó un retroceso.",
   "api.errors.sendTransactionApiError": "Error recibido del servidor al enviar la transacción.",
   "api.errors.sendTransactionError": "Error recibido de la llamada a la API al intentar enviar al transacción.",
@@ -109,7 +110,7 @@
   "global.language.portuguese": "Português",
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
-  "global.language.turkish": "Turco",
+  "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Nota: La contraseña de la Billetera de Papel debe ser de al menos <strong>10 caracteres</strong> de longitud.",
   "global.staleTxnWarningLine1": "Tu billetera ha cambiado desde que creaste esta transacción.",
   "global.staleTxnWarningLine2": "Aún puedes enviar esta transacción, pero puede fallar.",
@@ -207,7 +208,7 @@
   "settings.general.languageSelect.info": "Para EMURGO, la familiaridad en Yoroi es un tema importante. Creemos que entender los conceptos de la blockchain es más fácil en tu idioma nativo. Intentamos apoyar tantos idiomas como sea posible, pero para una selección más amplia de idiomas necesitamos aceptar la ayuda de traductores de la comunidad. La traducción del idioma seleccionado es proporcionada en su totalidad por la comunidad.",
   "settings.general.languageSelect.labelInfo": "La traducción del idioma elegido es proporcionada en su totalidad por la comunidad",
   "settings.general.translation.acknowledgment": "Gracias a los siguientes miembros por su contribución: ",
-  "settings.general.translation.contributors": "Sebastián Videmato, Rodrigo [RODRI]",
+  "settings.general.translation.contributors": "Sebastián Videmato, Rodrigo [RODRI/CAZ]",
   "settings.menu.blockchain.link.label": "Blockchain",
   "settings.menu.externalStorage.link.label": "Almacenamiento de memos",
   "settings.menu.general.link.label": "General",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Una billetera estándar respaldada por una frase de recuperación.",
   "wallet.add.optionDialog.create.paperWallet.description": "Las billeteras de papel pueden crearse incluso en dispositivos no conectados a Internet, lo que las hace muy adecuadas para el almacenamiento en frío de un solo uso.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurar billetera",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "Si tienes una frase de recuperación de 24 palabras, elige esta opción para restaurar tu billetera.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Ingresa una frase de recuperación de 24 palabras",
   "wallet.add.optionDialog.restore.normalWallet.description": "Si posees una frase de recuperación de Yoroi que consta de 15 palabras generadas cuando creaste una billetera de Yoroi, elige esta opción para restaurar tu billetera.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Ingresa una frase de recuperación de 15 palabras",
   "wallet.add.optionDialog.restore.paperWallet.description": "Si has generado una billetera de papel de Yoroi (la cual generalmente se imprime y resguarda off-line), puedes elegir esta opción para importar tus fondos.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Billetera de Papel",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Las billeteras creadas antes del 29 de julio de 2020 son billeteras de la era Byron y no pueden delegar.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Billetera de la era Byron (sólo lectura)",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Elige la era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Las billeteras de la era Shelley soportan la delegación en stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Billetera de la era Shelley",
   "wallet.add.page.create.title": "Crear billetera",
   "wallet.add.page.create.tooltip": "Genera una nueva frase de recuperación de 15 palabras <br/>y crea una billetera de Yoroi.",
   "wallet.add.page.daedalusTransfer.title": "Transferir fondos de billetera de Daedalus a Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano es el primer protocolo de prueba de participación probadamente seguro",
   "wallet.currency.pick.ergo": "Ergo construye características criptográficas avanzadas y una funcionalidad DeFi radicalmente nueva sobre los sólidos cimientos de una década de teoría y desarrollo de la blockchain",
   "wallet.currency.pick.header": "Selecciona una moneda o plataforma",
-  "wallet.dashboard.empty.text": "Dirígete a Participación Simple o Avanzada para elegir el stake pool al cuál delegar. Ten en cuenta que sólo puedes delegar en un stake pool durante esta Red de Prueba",
+  "wallet.dashboard.empty.text": "Dirígete a la sección de delegación para elegir el stake pool al que quieres delegar.",
   "wallet.dashboard.empty.title": "No has delegado tus ADA aún",
   "wallet.dashboard.epochEndTitle": "Finaliza en",
   "wallet.dashboard.epochProgress": "Progreso del epoch",
@@ -438,6 +446,7 @@
   "wallet.dashboard.stakePool.pledge": "Compromiso",
   "wallet.dashboard.stakePool.stake": "Participación",
   "wallet.dashboard.stakePool.title": "Stake pool delegado",
+  "wallet.dashboard.stakePool.viewWebpage": "Ver la página web del pool",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total delegado",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA pueden corregirse",
@@ -455,18 +464,20 @@
   "wallet.debugwallet.explanation1": "La billetera que has seleccionado ({checksumTextPart}) sirve para pruebas y depuración.",
   "wallet.debugwallet.explanation2": "Para evitar cualquier problema, no uses esta billetera.<br />En su lugar, usa Yoroi para crear una nueva billetera.",
   "wallet.debugwallet.explanation3": "Si no esperabas este mensaje, por favor {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "ID de pool inválido",
+  "wallet.delegation.poolInfo.fetching": "Obteniendo la información del stake pool",
   "wallet.delegation.transaction.approximationLabel": "Aproximación actual de las recompensas que recibirás por epoch:",
   "wallet.delegation.transaction.explanationLine1": "Sólo puedes delegar en un stake pool a la vez",
   "wallet.delegation.transaction.explanationLine2": "En cualquier momento puedes cambiar a un stake pool diferente",
   "wallet.delegation.transaction.explanationLine3": "Puedes cancelar tu delegación en cualquier momento",
   "wallet.delegation.transaction.generation": "Generando la transacción",
-  "wallet.delegation.transaction.stakePoolHash": "Hash del stake pool",
+  "wallet.delegation.transaction.stakePoolHash": "ID del stake pool",
   "wallet.delegation.transaction.stakePoolName": "Nombre del stake pool",
   "wallet.delegation.transaction.success.button.label": "Página de Seguimiento",
   "wallet.delegation.transaction.success.explanation": "Realiza un control del estado del stake pool, y del tiempo que resta para recibir una recompensa, desde la página de Seguimiento",
   "wallet.delegation.transaction.success.title": "Delegación exitosa",
-  "wallet.deprecation.byronLine1": "La actualización del protocolo Shelley añade un nuevo tipo de billetera Shelley que permite la delegación.",
-  "wallet.deprecation.byronLine2": "Para delegar su ADA tendrá que actualizarse a una billetera Shelley.",
+  "wallet.deprecation.byronLine1": "La actualización del protocolo de Shelley añade un nuevo tipo de billetera de Shelley que permite la delegación.",
+  "wallet.deprecation.byronLine2": "Para delegar tus ADA deberás actualizar tu billetera a una de Shelley.",
   "wallet.hw.common.error.101": "Los permisos necesarios no fueron concedidos por el usuario. Por favor, inténtalo de nuevo.",
   "wallet.hw.ledger.common.error.101": "Operación cancelada en el dispositivo Ledger.",
   "wallet.hw.ledger.common.error.102": "Operación cancelada por el usuario.",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Billetera de Papel",
   "wallet.nav.type.standard": "Billetera estándar",
   "wallet.nav.type.trezor": "Dispositivo Trezor",
-  "wallet.navigation.delegationAdvance": "Delegación (Avanzada)",
   "wallet.navigation.delegationDashboard": "Seguimiento",
-  "wallet.navigation.delegationSimple": "Centro de Delegación",
+  "wallet.navigation.delegationSimple": "Delegación",
   "wallet.navigation.receive": "Recibir",
   "wallet.navigation.send": "Enviar",
   "wallet.navigation.transactions": "Transacciones",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Verificar la billetera de Yoroi",
   "wallet.restore.dialog.upgrade.noop": "Tu billetera no requiere ser actualizada",
   "wallet.restore.dialog.verify.accountId.byron.label": "Checksum de cuenta Byron:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "Checksum de la cuenta ITN:",
   "wallet.restore.dialog.verify.accountId.label": "Checksum de Cuenta de tu Billetera:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Checksum de cuenta Shelley:",
   "wallet.restore.dialog.verify.addressesLabel": "Direcciones de tu billetera:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Asegúrate de que el checksum de la cuenta y el icono coincidan con lo que recuerdas.",
   "wallet.restore.dialog.verify.intro.line3": "Asegúrate de que las direcciones coincidan con lo que recuerdas.",
   "wallet.restore.dialog.verify.intro.line4": "Si has ingresado una frase de recuperación (o una contraseña) incorrecta de tu billetera de papel, simplemente abrirá otra billetera vacía con un checksum de cuenta incorrecto y direcciones incorrectas.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "Direccion[es] de la billetera de la ITN:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Dirección[es] de la billetera Shelley:",
   "wallet.restore.dialog.verify.title": "Verificar la billetera restaurada",
   "wallet.restore.dialog.verify.wallet.button.label": "Verificar la billetera",
@@ -561,19 +573,14 @@
   "wallet.send.form.amount.equalsAda": "equivale a {amount} ADA",
   "wallet.send.form.calculatingFee": "Calculando comisión...",
   "wallet.send.form.cannotSendToLegacy": "No puedes enviar a direcciones antiguas (cualquier dirección creada antes del 29 de noviembre de 2019)",
-  "wallet.send.form.cannotSendToReward": "No puedes enviar a una cuenta de compensación",
-  "wallet.send.form.description.hint": "Puedes añadir un mensaje, si quieres",
-  "wallet.send.form.description.label": "Descripción",
+  "wallet.send.form.cannotSendToReward": "No puedes enviar a una cuenta de recompensas",
   "wallet.send.form.errors.invalidAddress": "Por favor, ingresa una dirección válida.",
   "wallet.send.form.errors.invalidAmount": "Por favor, ingresa un monto válido.",
-  "wallet.send.form.errors.invalidTitle": "Por favor, ingresa un título de al menos 3 caracteres.",
   "wallet.send.form.errors.tooSmallUtxo": "No puedes enviar menos de {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Dirección de la Billetera",
   "wallet.send.form.receiver.label": "Dirección de destino",
   "wallet.send.form.sendAll.checkboxLabel": "Enviar todo",
   "wallet.send.form.sendingIsDisabled": "No se puede enviar una nueva transacción mientras exista otra pendiente.",
-  "wallet.send.form.title.hint": "Por ejemplo, dinero para Frank",
-  "wallet.send.form.title.label": "Título",
   "wallet.send.form.transactionFeeError": "Fondo insuficiente para las comisiones. Intenta enviar una cantidad más pequeña.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Luego de conectar el dispositivo Ledger al puerto USB del ordenador, presiona el botón Enviar del Ledger.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Asegúrate de que la aplicación Cardano ADA permanezca abierta en el dispositivo Ledger durante todo el proceso.",
