--- a/app/i18n/locales/id-ID.json
+++ b/app/i18n/locales/id-ID.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "Signature tidak valid.",
   "api.errors.noInputsError": "Wallet yang dikembalikan dari frasa pemulihan Anda kosong. Silakan periksa frasa pemulihan Anda dan coba pemulihan lagi.",
   "api.errors.pendingTransactionError": "Terjadi kesalahan saat memperbarui transaksi yang tertunda.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback was detected.",
   "api.errors.sendTransactionApiError": "Error dari server saat pengiriman transaksi.",
   "api.errors.sendTransactionError": "Error dari fungsi Api saat pengiriman transaksi.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "Kembalikan wallet",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "Jika Anda memiliki frasa pemulihan Yoroi yang terdiri dari 15 kata yang dihasilkan saat Anda membuat Wallet Yoroi, pilih opsi ini untuk mengembalikan wallet Anda.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Masukkan 15-kata frasa pemulihan",
   "wallet.add.optionDialog.restore.paperWallet.description": "Jika Anda sudah membuat paper wallet Yoroi (yang biasanya dicetak dan disimpan secara offline), Anda dapat memilih opsi ini untuk mengimpor dana dari paper wallet Yoroi Anda.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "Buat wallet",
   "wallet.add.page.create.tooltip": "Generate a new 15-word recovery phrase<br/>and create a Yoroi wallet.",
   "wallet.add.page.daedalusTransfer.title": "Transfer dana dari wallet Daedalus ke Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano is the first provably secure proof of stake protocol",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Pick a currency or platform",
-  "wallet.dashboard.empty.text": "Go to Simple or Advance Staking to choose what stake pool you want to delegate in. Note, you may delegate only to one stake pool in this Tesnnet",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Revenue",
   "wallet.dashboard.stakePool.cost": "Cost",
   "wallet.dashboard.stakePool.created": "Created",
-  "wallet.dashboard.stakePool.descriptionButton": "Full description",
+  "wallet.dashboard.stakePool.descriptionButton": "Deskripsi",
   "wallet.dashboard.stakePool.fullness": "Fullness",
   "wallet.dashboard.stakePool.margins": "Margins",
   "wallet.dashboard.stakePool.performance": "Performance",
   "wallet.dashboard.stakePool.pledge": "Pledge",
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegated",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA can be corrected",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
   "wallet.debugwallet.explanation3": "If you did not expect this message, please {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Current approximation of rewards that you will receive per epoch:",
   "wallet.delegation.transaction.explanationLine1": "You can only delegate to one stake pool at a time",
   "wallet.delegation.transaction.explanationLine2": "You can switch to delegate to a different stake pool at any time",
   "wallet.delegation.transaction.explanationLine3": "You can cancel your delegation at any time",
   "wallet.delegation.transaction.generation": "Generating transaction",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool hash",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Stake pool name",
   "wallet.delegation.transaction.success.button.label": "Dashboard page",
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Paper wallet",
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
-  "wallet.navigation.delegationAdvance": "Delegation (Advance)",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delegation (Simple)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Terima",
   "wallet.navigation.send": "Kirim",
   "wallet.navigation.transactions": "Transaksi",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Verifikasi Paper wallet Yoroi",
   "wallet.restore.dialog.upgrade.noop": "Your wallet did not need to be upgraded",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron account checksum:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "Checksum Akun Wallet Anda:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley account checksum:",
   "wallet.restore.dialog.verify.addressesLabel": "Address Wallet Anda[es]:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Pastikan checksum dan ikon akun sesuai dengan yang Anda ingat.",
   "wallet.restore.dialog.verify.intro.line3": "Pastikan alamat sesuai dengan yang Anda ingat.",
   "wallet.restore.dialog.verify.intro.line4": "Jika Anda memasukkan mnemonik yang salah atau kata sandi paper wallet yang salah - Anda akan membuka wallet yang kosong dengan checksum akun yang salah dan alamat yang salah.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Wallet address[es]:",
   "wallet.restore.dialog.verify.title": "Verifikasi Wallet yang Dipulihkan",
   "wallet.restore.dialog.verify.wallet.button.label": "Verifikasi wallet",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "Menghitung biaya...",
   "wallet.send.form.cannotSendToLegacy": "You cannot send to legacy addresses (any address created before November 29th, 2019)",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "Anda bisa menambahkan pesan jika Anda menginginkan nya",
-  "wallet.send.form.description.label": "Deskripsi",
   "wallet.send.form.errors.invalidAddress": "Harap masukkan address yang benar.",
   "wallet.send.form.errors.invalidAmount": "Harap masukkan jumlah yang benar.",
-  "wallet.send.form.errors.invalidTitle": "Harap masukkan judul setidaknya 3 karakter.",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Address Wallet",
   "wallet.send.form.receiver.label": "Penerima",
   "wallet.send.form.sendAll.checkboxLabel": "Kirim semua {currency}",
   "wallet.send.form.sendingIsDisabled": "Tidak dapat mengirim transaksi baru selama transaksi lain masih tertunda.",
-  "wallet.send.form.title.hint": "Misal. Uang untuk Frank",
-  "wallet.send.form.title.label": "Judul",
   "wallet.send.form.transactionFeeError": "Ada tidak cukup untuk biaya. Coba kirim kembali dengan jumlah yang lebih kecil.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Setelah menghubungkan perangkat Ledger Anda ke port USB komputer Anda, tekan Kirim menggunakan tombol Ledger.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Pastikan aplikasi Cardano ADA tetap terbuka pada perangkat Ledger selama proses berlangsung.",
