--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -25,12 +25,13 @@
   "api.errors.getTxsBodiesForUTXOsError": "Erro recebido na chamada do método da API ao obter TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Erro recebido do servidor ao obter UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Erro recebido do servidor ao obter o saldo",
-  "api.errors.hardwareUnsupportedError": "This hardware wallet is currently not supported.",
+  "api.errors.hardwareUnsupportedError": "Atualmente, esta carteira de hardware não é suportada.",
   "api.errors.histoicalCoinPriceError": "Dados históricos de preços de moedas não estão disponíveis agora.",
   "api.errors.invalidMnemonicError": "\nFrase inserida é inválida, por favor, verifique.",
   "api.errors.invalidWitnessError": "A assinatura é inválida.",
   "api.errors.noInputsError": "A carteira restaurada a partir de sua frase de recuperação está vazia. Por favor, verifique sua frase de recuperação e tente a restauração novamente.",
   "api.errors.pendingTransactionError": "Erro ao atualizar transações pendentes.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Uma reversão foi detectada.",
   "api.errors.sendTransactionApiError": "Erro recebido do servidor durante o envio da transação.",
   "api.errors.sendTransactionError": "Erro recebido na chamada do método da API durante o envio da transação.",
@@ -89,7 +90,7 @@
   "global.labels.loadMore": "Carregar mais",
   "global.labels.memo": "Nota",
   "global.labels.next": "Próximo",
-  "global.labels.note": "Note:",
+  "global.labels.note": "Nota:",
   "global.labels.optionalMemo": "Nota (opcional)",
   "global.labels.processing": "Processando...",
   "global.labels.remove": "Remover",
@@ -109,7 +110,7 @@
   "global.language.portuguese": "Português",
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
-  "global.language.turkish": "Turkish",
+  "global.language.turkish": "Turco",
   "global.passwordInstructionsPaperWallet": "Nota: a senha da Carteira de papel precisa ter pelo menos <strong> 10 caracteres </strong>.",
   "global.staleTxnWarningLine1": "Sua carteira foi alterada desde a criação dessa transação.",
   "global.staleTxnWarningLine2": "Você ainda pode enviar essa transação mas ela deve falhar.",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Um carteira padrão endossada por uma frase de restauração.",
   "wallet.add.optionDialog.create.paperWallet.description": "Carteira de papel pode ser criada por dispositivos não conectados com a internet o que faz dela muito conveniente para um único uso como armazenamento frio.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurar wallet",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "Se você tiver uma frase de recuperação composta por 24 palavras, escolha esta opção para restaurar sua carteira.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Insira sua frase de recuperação constituída de 24 palavras",
   "wallet.add.optionDialog.restore.normalWallet.description": "Se você possui uma frase de recuperação constituída de 15 palavras geradas quando você criou sua Yoroi Wallet, escolha esta opção para recuperá-la.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Insira sua frase de recuperação constituída de 15 palavras",
   "wallet.add.optionDialog.restore.paperWallet.description": "Se você possui uma Yoroi paper wallet, a qual é usualmente imprimida e mantida offline, você pode escolher esta opção para importar os fundos da mesma.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "As carteiras criadas antes de 29 de julho de 2020 são carteiras da era Byron e não podem delegar.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Carteira da era Byron (somente leitura)",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Escolha a era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "As carteiras da era Shelley suportam a delegação para as stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Carteira da era Shelley",
   "wallet.add.page.create.title": "Criar wallet",
   "wallet.add.page.create.tooltip": "Crie uma nova frase de recuperação de 15 palavras<br/>e crie uma Yoroi wallet.",
   "wallet.add.page.daedalusTransfer.title": "Transferir fundos de uma wallet Daedalus para uma Yoroi",
@@ -338,10 +346,10 @@
   "wallet.add.page.restore.tooltip": "Insira uma frase de recuperação de 15 palavras<br/>para restaurar uma wallet Yoroi já existente,<br/>ou importe uma Yoroi paper wallet existente.",
   "wallet.add.page.subtitle.label": "Yoroi é uma carteira leve para Cardano",
   "wallet.add.page.title": "Seu portal de entrada <br>para o<br> mundo financeiro",
-  "wallet.address.category.addressBook": "Addresses that do not belong to you, but are relevant to your wallet",
-  "wallet.address.category.byron": "Addresses created using the Byron-era address format",
-  "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
-  "wallet.address.category.p2pk": "Addresses generated directly from a public key",
+  "wallet.address.category.addressBook": "Endereços que não pertencem a você, mas são relevantes para sua carteira",
+  "wallet.address.category.byron": "Endereços criados usando o formato de endereço da era Byron",
+  "wallet.address.category.group": "Endereços formados pela combinação de uma chave de gastos e uma chave de stake",
+  "wallet.address.category.p2pk": "Endereços gerados diretamente de uma chave pública",
   "wallet.amountInput.feesLabel": "+ {amount} das taxas",
   "wallet.backup.dialog.legacy.checkConfirm": "Deseja verificar se sua carteira precisa ser atualizada?",
   "wallet.backup.dialog.legacy.explanation": "Se você tinha algum ADA em sua carteira em 29 de novembro de 2019\n    você precisa atualizar sua carteira para uma \"carteira de recompensa\" da Shelley.",
@@ -400,9 +408,9 @@
   "wallet.create.dialog.title": "Criar carteira",
   "wallet.create.dialog.walletNameHint": "por exemplo: Carteira de Compras",
   "wallet.currency.pick.cardano": "Cardano é o primeiro protocol de prova de stake comprovadamente seguro",
-  "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
+  "wallet.currency.pick.ergo": "Ergo cria recursos criptográficos avançados e funcionalidade DeFi radicalmente nova, embasada em fundações sólidas estabelecidas por uma década de teoria e desenvolvimento de blockchain",
   "wallet.currency.pick.header": "Escolha a moeda ou plataforma",
-  "wallet.dashboard.empty.text": "Vá para o Simples ou Avançado para escolher em qual stake pool você deseja delegar. Observação, você pode delegar apenas para um stake pool durante a Testnet",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "Você não delegou a sua ADA ainda",
   "wallet.dashboard.epochEndTitle": "Tempo até o fim da Época",
   "wallet.dashboard.epochProgress": "Progresso da Época",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Receita",
   "wallet.dashboard.stakePool.cost": "Custo",
   "wallet.dashboard.stakePool.created": "Criado",
-  "wallet.dashboard.stakePool.descriptionButton": "Descrição completa",
+  "wallet.dashboard.stakePool.descriptionButton": "Descrição",
   "wallet.dashboard.stakePool.fullness": "Plenitude",
   "wallet.dashboard.stakePool.margins": "Margens",
   "wallet.dashboard.stakePool.performance": "Performance",
   "wallet.dashboard.stakePool.pledge": "Garantia",
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegado",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegado",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA pode ser corrigida",
@@ -455,18 +464,20 @@
   "wallet.debugwallet.explanation1": "A carteira que você selecionou ({checksumTextPart}) é para teste e depuração.",
   "wallet.debugwallet.explanation2": "Para evitar problemas, não use esta carteira. <br /> Em vez disso, use o Yoroi para criar uma nova carteira.",
   "wallet.debugwallet.explanation3": "Se você não esperava essa mensagem, por favor {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Aproximação atual das recompensas que você receberá por época:",
   "wallet.delegation.transaction.explanationLine1": "Você só pode delegar apenas para uma pool de cada vez",
   "wallet.delegation.transaction.explanationLine2": "Você pode mudar sua delegação para um stake pool diferente a qualquer momento",
   "wallet.delegation.transaction.explanationLine3": "Você pode cancelar a sua delegação a qualquer momento",
   "wallet.delegation.transaction.generation": "Gerando transação",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool hash",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Nome do stake pool",
   "wallet.delegation.transaction.success.button.label": "Página do painel",
   "wallet.delegation.transaction.success.explanation": "Acompanhe o status do stake pool e o tempo restante para receber uma recompensa na página do Painel",
   "wallet.delegation.transaction.success.title": "Delegado com sucesso",
-  "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine1": "A atualização do protocolo Shelley adiciona um novo tipo de carteira Shelley que suporta delegação.",
+  "wallet.deprecation.byronLine2": "Para delegar seu ADA, você precisará atualizar para uma carteira Shelley.",
   "wallet.hw.common.error.101": "As permissões necessárias não foram concedidas pelo usuário. Por favor tente novamente.",
   "wallet.hw.ledger.common.error.101": "Operação cancelada no dispositivo Ledger.",
   "wallet.hw.ledger.common.error.102": "Operação cancelada pelo usuário.",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Carteira de papel",
   "wallet.nav.type.standard": "Carteira padrão",
   "wallet.nav.type.trezor": "Trezor wallet",
-  "wallet.navigation.delegationAdvance": "Delegação (Avançada)",
   "wallet.navigation.delegationDashboard": "Painel",
-  "wallet.navigation.delegationSimple": "Delegação (Simples)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Receber",
   "wallet.navigation.send": "Enviar",
   "wallet.navigation.transactions": "Transações",
@@ -496,7 +506,7 @@
   "wallet.receive.nav.external": "Externo",
   "wallet.receive.nav.internal": "Interno",
   "wallet.receive.nav.mangled": "Mangled",
-  "wallet.receive.navigation.AddressBook": "Address book",
+  "wallet.receive.navigation.AddressBook": "Livro de endereços",
   "wallet.receive.navigation.allLabel": "Todos",
   "wallet.receive.navigation.baseLabel": "Base",
   "wallet.receive.navigation.byronLabel": "Byron",
@@ -511,7 +521,7 @@
   "wallet.receive.page.generatedAddressesSectionTitle": "Endereços gerados",
   "wallet.receive.page.internalWarning1": "Endereços internos (ou \"modificar\" endereços) mantêm sua privacidade ocultando quais endereços pertencem a você na blockchain",
   "wallet.receive.page.internalWarning2": "os endereços são mostrados aqui para fins de auditoria pessoal e <strong> nunca </strong> devem ser usados.",
-  "wallet.receive.page.label": "Label",
+  "wallet.receive.page.label": "Rótulo",
   "wallet.receive.page.mangledWarning1": "Endereços Mangled contribuem para seu saldo de ADA, mas têm a preferência de delegação incorreta",
   "wallet.receive.page.noResultsFoundLabel": "Resultados não encontrados",
   "wallet.receive.page.notFoundAnyAddresses": "Não encontramos nenhum endereço coincidindo com seu filtro.",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Verifique a carteira de papel Yoroi",
   "wallet.restore.dialog.upgrade.noop": "A sua carteira não precisa ser atualizada",
   "wallet.restore.dialog.verify.accountId.byron.label": "Verificação de conta Byron:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "Verificação da conta ITN:",
   "wallet.restore.dialog.verify.accountId.label": "Verifique a soma de suas carteiras:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Verificação de conta Shelley:",
   "wallet.restore.dialog.verify.addressesLabel": "O[s] endereço[s] da sua carteira:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Verifique se a soma de verificação e o ícone da conta correspondem ao que você lembra.",
   "wallet.restore.dialog.verify.intro.line3": "Verifique se os endereços correspondem ao que você lembra.",
   "wallet.restore.dialog.verify.intro.line4": "Se você digitou mnemônicos errados ou uma senha incorreta da carteira em papel - basta abrir outra carteira vazia com soma de verificação da conta e endereços incorretos.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "Endereços da carteira ITN:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Endereços da carteira Shelley[es]:",
   "wallet.restore.dialog.verify.title": "Verificar carteira restaurada",
   "wallet.restore.dialog.verify.wallet.button.label": "Verificar carteira",
@@ -561,19 +573,14 @@
   "wallet.send.form.amount.equalsAda": "Valor: {amount} ADA",
   "wallet.send.form.calculatingFee": "Calculando taxas...",
   "wallet.send.form.cannotSendToLegacy": "Você não pode enviar para endereços antigos (qualquer endereço criado antes de 29 de novembro de 2019)",
-  "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "Se desejar você pode adicionar uma mensagem",
-  "wallet.send.form.description.label": "Descrição",
+  "wallet.send.form.cannotSendToReward": "Você não pode enviar para uma conta de recompensa",
   "wallet.send.form.errors.invalidAddress": "Por favor insira um endereço válido.",
   "wallet.send.form.errors.invalidAmount": "Por favor insira um valor válido.",
-  "wallet.send.form.errors.invalidTitle": "Por favor insira um título com no mínimo 3 caracteres.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Não é possível enviar menos de {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Endereço da Wallet",
   "wallet.send.form.receiver.label": "Receptor",
   "wallet.send.form.sendAll.checkboxLabel": "Vender todas {currency}",
   "wallet.send.form.sendingIsDisabled": "Não é possível realizar uma nova transação enquanto outra ainda está pendente.",
-  "wallet.send.form.title.hint": "Exemplo: Quantia para José",
-  "wallet.send.form.title.label": "Título",
   "wallet.send.form.transactionFeeError": "Ada insuficiente para suprir as taxas. Tente o envio de uma quantia menor.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Após conectar o dispositivo Ledger à porta USB do computador, pressione o botão Send na própria Ledger.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Tenha certeza de que o app Cardano ADA continua aberto no dispositivo Ledger durante o processo.",
@@ -605,7 +612,7 @@
   "wallet.staking.warning.title": "Delegação temporariamente desabilitada",
   "wallet.summary.no.transaction": "Nenhuma transação encontrada",
   "wallet.summary.page.dateTime": "Data/hora",
-  "wallet.summary.page.integratedNotificationMessage": "You have successfully integrated with your {deviceName}",
+  "wallet.summary.page.integratedNotificationMessage": "Você se conectou com sucesso a sua {deviceName}",
   "wallet.summary.page.pendingIncomingConfirmationLabel": "Confirmação de entrada pendente",
   "wallet.summary.page.pendingOutgoingConfirmationLabel": "Confirmação de saída pendente",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "Mostrar mais transações",
@@ -658,8 +665,8 @@
   "wallet.transfer.instruction": "Toda ADA solicitada será transferida para sua carteira selecionada recentemente",
   "wallet.undelegation.transaction.explanationLine1": "Você NÃO precisa desfazer a delegação para mudar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Levará duas épocas após o final da época atual para que a remoção da delegação entre em vigor",
-  "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
-  "wallet.unsupported.title": "Wallet type not supported",
+  "wallet.unsupported.subtitle": "A carteira selecionada não suporta esta funcionalidade",
+  "wallet.unsupported.title": "Tipo de carteira não suportado",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar para área de transferência",
   "widgets.explorer.tooltip": "Ir para {websiteName}",
   "widgets.warningBox.headerText": "ATENÇÃO:",
