--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "簽章無效。",
   "api.errors.noInputsError": "從恢復短語恢復的錢包是空的。請先檢查您的恢復短語，並再次嘗試恢復。",
   "api.errors.pendingTransactionError": "更新擱置的交易時出現錯誤。",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "檢測到回返。",
   "api.errors.sendTransactionApiError": "傳送交易時出現伺服器錯誤。",
   "api.errors.sendTransactionError": "傳送交易時出現 api 方法呼叫錯誤。",
@@ -324,10 +325,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "還原錢包",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "如果您創建Yoroi錢包時恢復密鑰為15個助記詞，請選擇此選項來恢復您的錢包。",
   "wallet.add.optionDialog.restore.normalWallet.title": "點此輸入15個恢復助記詞",
   "wallet.add.optionDialog.restore.paperWallet.description": "如果您已生成了一個Yoroi紙錢包(通常打印後離線保存)，您可以選擇此選項將紙錢包中的資金導入。",
   "wallet.add.optionDialog.restore.paperWallet.title": "紙錢包",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "創建錢包",
   "wallet.add.page.create.tooltip": "生成一組新的十五字元的錢包恢復短語並創建一個Yoroi錢包",
   "wallet.add.page.daedalusTransfer.title": "從Daedalus錢包轉移資金到Yoroi",
@@ -402,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano is the first provably secure proof of stake protocol",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Pick a currency or platform",
-  "wallet.dashboard.empty.text": "Go to Simple or Advance Staking to choose what stake pool you want to delegate in. Note, you may delegate only to one stake pool in this Tesnnet",
+  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
@@ -431,13 +439,14 @@
   "wallet.dashboard.stakePool.circleText": "Revenue",
   "wallet.dashboard.stakePool.cost": "Cost",
   "wallet.dashboard.stakePool.created": "Created",
-  "wallet.dashboard.stakePool.descriptionButton": "Full description",
+  "wallet.dashboard.stakePool.descriptionButton": "說明",
   "wallet.dashboard.stakePool.fullness": "Fullness",
   "wallet.dashboard.stakePool.margins": "Margins",
   "wallet.dashboard.stakePool.performance": "Performance",
   "wallet.dashboard.stakePool.pledge": "Pledge",
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegated",
+  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA can be corrected",
@@ -455,12 +464,14 @@
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
   "wallet.debugwallet.explanation3": "If you did not expect this message, please {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Current approximation of rewards that you will receive per epoch:",
   "wallet.delegation.transaction.explanationLine1": "You can only delegate to one stake pool at a time",
   "wallet.delegation.transaction.explanationLine2": "You can switch to delegate to a different stake pool at any time",
   "wallet.delegation.transaction.explanationLine3": "You can cancel your delegation at any time",
   "wallet.delegation.transaction.generation": "Generating transaction",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool hash",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Stake pool name",
   "wallet.delegation.transaction.success.button.label": "Dashboard page",
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
@@ -480,9 +491,8 @@
   "wallet.nav.type.paper": "Paper wallet",
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
-  "wallet.navigation.delegationAdvance": "Delegation (Advance)",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delegation (Simple)",
+  "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "傳送",
   "wallet.navigation.transactions": "交易",
@@ -537,6 +547,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "驗證Yoroi紙錢包",
   "wallet.restore.dialog.upgrade.noop": "Your wallet did not need to be upgraded",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron account checksum:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "您錢包賬戶的校驗碼：",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley account checksum:",
   "wallet.restore.dialog.verify.addressesLabel": "您的錢包地址:",
@@ -545,6 +556,7 @@
   "wallet.restore.dialog.verify.intro.line2": "確保帳戶校驗和和圖標符合您的記憶。",
   "wallet.restore.dialog.verify.intro.line3": "請確保地址與你記憶的相匹配。",
   "wallet.restore.dialog.verify.intro.line4": "如果你輸入了錯誤的助記詞或錯誤的紙錢包密碼，你只會打開一個校驗碼和地址不同的空錢包。",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Wallet address[es]:",
   "wallet.restore.dialog.verify.title": "驗證已恢復的錢包",
   "wallet.restore.dialog.verify.wallet.button.label": "驗證錢包",
@@ -562,18 +574,13 @@
   "wallet.send.form.calculatingFee": "正在計算費用...",
   "wallet.send.form.cannotSendToLegacy": "You cannot send to legacy addresses (any address created before November 29th, 2019)",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "您可依據需要新增訊息",
-  "wallet.send.form.description.label": "說明",
   "wallet.send.form.errors.invalidAddress": "請輸入有效地址。",
   "wallet.send.form.errors.invalidAmount": "請輸入有效金額。",
-  "wallet.send.form.errors.invalidTitle": "請輸入一個由至少 3 個字元組成的標題。",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "錢包地址",
   "wallet.send.form.receiver.label": "收件人",
   "wallet.send.form.sendAll.checkboxLabel": "發送所有的{currency}",
   "wallet.send.form.sendingIsDisabled": "由於目前有待處理狀態的交易，新交易無法發送。",
-  "wallet.send.form.title.hint": "例如：支付給 Frank 的款項",
-  "wallet.send.form.title.label": "標題",
   "wallet.send.form.transactionFeeError": "費用所需的 Ada 不足。嘗試傳送較小的金額。",
   "wallet.send.ledger.confirmationDialog.info.line.1": "將 Ledger 設備連接到電腦USB後, 按下發送按鈕。",
   "wallet.send.ledger.confirmationDialog.info.line.2": "確保 Cardano ADA 應用程式在整個過程中保持在 Ledger 設備上的打開狀態。",
